--- a/Git/->폴더 실행 불가.md
+++ b/Git/->폴더 실행 불가.md
@@ -19,20 +19,22 @@
   
 #### 2. 문제의 폴더에 있는 .git 파일을 제거한다. 즉 Sub 폴더 내부의 .git 파일을 삭제한다.
 
-` $ rm -rf .git `
+```git 
+$ rm -rf .git 
+```
 
 #### 3. 스테이지의 파일 제거
 
 Sub폴더에서 커맨드창(bash창)을 열고, 다음과 같이 명령한다.
-```
+```git
 $ git rm --cached . -rf
 ```
 #### 4. add - commit - push 진행
 
-```
-git add .
-git commit -m "remove .git file"
-git push origin main
+```git
+$ git add .
+$ git commit -m "remove .git file"
+$ git push origin main
 
 ```
 
