--- a/Git/learn/1장/깃 시작하기.md
+++ b/Git/learn/1장/깃 시작하기.md
@@ -18,12 +18,12 @@ $git config --global user.email "usermail@gmail.com"
 ```git
 $ pwd
 ```
-pwd는 'print working directory'의 줄임말로, 현재 위치의 경로를 알려줌.
+* pwd는 'print working directory'의 줄임말로, 현재 위치의 경로를 알려줌.
 
 ```git
-$ ls
+$ ls (option)
 ```
-ls 명령은 'list'의 줄임말로, 현재 디렉터리에 어떤 파일이나 디렉터리가 있는지 확인할 때 사용.
+* ls 명령은 'list'의 줄임말로, 현재 디렉터리에 어떤 파일이나 디렉터리가 있는지 확인할 때 사용.
 
 |옵션|설명|
 |-|-|
@@ -33,9 +33,35 @@ ls 명령은 'list'의 줄임말로, 현재 디렉터리에 어떤 파일이나 
 |-t|파일 작성 시간 순으로 (내림차순) 표시|
 
 ```git
-$ cd .. 
+$ cd (directory)
 ```
-cd 명령은 'change directory'의 줄임말로, 터미널 창에서 디렉터리 사이를 이동할 때 사용.
+* cd 명령은 'change directory'의 줄임말로, 터미널 창에서 디렉터리 사이를 이동할 때 사용.
+
+|기호 및 디렉터리|설명|
+|-|-|
+|..|상위 디렉터리|
+|(directory)|해당 디렉터리|
+|~|현재 접속 중인 사용자의 홈 디렉터리|
+|./|현재 사용자가 작업 중인 디렉터리|
+|../|현재 디렉터리의 상위 디렉터리|
+
+```git
+$ mkdir (directory)
+```
+* mkdir 명령은 'make directory'의 줄임말로, 해당 디렉터리에서 하위 디렉터리를 생성.
+
+```git
+$ rm (option) (directory)
+```
+* rm 명령은 'remove'의 줄임말로, 해당 디렉터리 안에 있는 하위 디렉터리를 삭제.
+  * -r 옵션을 붙이면 디렉터리 안에 있는 하위 디렉터리와 파일까지 함께 삭제.
+
+```git
+$ vim 
+```
+* 리눅스의 기본 편집기인 빔(vim)은 터미널에서 사용할 수 있는 대표적인 편집기.
+
+
 
 
 
