--- a/Git/learn/1장/깃 시작하기.md
+++ b/Git/learn/1장/깃 시작하기.md
@@ -57,9 +57,18 @@ $ rm (option) (directory)
   * -r 옵션을 붙이면 디렉터리 안에 있는 하위 디렉터리와 파일까지 함께 삭제.
 
 ```git
-$ vim 
+$ vim (파일이름.확장자)
 ```
 * 리눅스의 기본 편집기인 빔(vim)은 터미널에서 사용할 수 있는 대표적인 편집기.
+  * 빔에는 문서를 작성하는 '입력 모드'와 문서를 저장하는 'ex모드'가 존재.
+  * 입력 모드로 전환하려면 단축키 'I' 또는 'A'를 눌러 입력.
+  * ex 모드로 전환하려면 단축키 'Esc'를 입력
+
+
+
+
+
+
 
 
 
