--- a/Git/learn/1장/깃 시작하기.md
+++ b/Git/learn/1장/깃 시작하기.md
@@ -64,10 +64,17 @@ $ vim (파일이름.확장자)
   * 입력 모드로 전환하려면 단축키 'I' 또는 'A'를 눌러 입력.
   * ex 모드로 전환하려면 단축키 'Esc'를 입력
 
+|명령|설명|
+|-|-|
+|:w 또는 :write|편집 중이던 문서를 저장|
+|:q 또는 :quit|편집기를 종료|
+|:wq (파일)|편집 중이던 문서를 저장 및 종료. 파일 이름을 함께 입력하면 그 이름으로 저장|
+|:q!|문서를 저장하지 않고 편집기를 종료. 확장자가 미입력시 .swp인 임시 파일이 생성|
 
-
-
-
+```git
+$ git config --global core.editor "편집기"
+```
+* 깃의
 
 
 
