--- a/Git/learn/1장/깃 시작하기.md
+++ b/Git/learn/1장/깃 시작하기.md
@@ -72,9 +72,11 @@ $ vim (파일이름.확장자)
 |:q!|문서를 저장하지 않고 편집기를 종료. 확장자가 미입력시 .swp인 임시 파일이 생성|
 
 ```git
-$ git config --global core.editor "편집기"
+$ git config --global core.editor "변경할 편집기"
 ```
-* 깃의
+* 깃에서 사용하는 편집기를 자신이 익숙하게 사용하는 편집기로 변경 가능.
+  * 편집기 이름 대신 편집기 실행 파일의 경로로 입력 가능.
+  * vscode는 "code --wait"
 
 
 
