--- a/Git/learn/1장/깃 시작하기.md
+++ b/Git/learn/1장/깃 시작하기.md
@@ -1,12 +1,12 @@
-## 1장 깃(Git) 용어 및 사용방법
+ ## 1장 깃(Git) 용어 및 사용방법
 
 **1. 깃 환경 설정하기**
 
-* Git을 사용하기 전에 먼저 사용자 정보를 입력해야 함.
-   * Git은 버전을 저장할 때마다 그 버전을 만든 사용자 정보도 함께 저장.
-   * 깃에서 사용자 정보를 설정하려면 git config명령을 사용.
-* Git명령을 단독으로 입력하면 쓸 수 있는 여러 옵션이 표시.
-   * 여기서 --global 옵션을 추가하면 현재 컴퓨터에 있는 모든 저장소에서 같은 사용자 정보를 사용하도록 설정.
+* Git을 사용하기 전에 먼저 사용자 정보를 입력해야 함
+   * Git은 버전을 저장할 때마다 그 버전을 만든 사용자 정보도 함께 저장
+   * 깃에서 사용자 정보를 설정하려면 git config명령을 사용
+* Git명령을 단독으로 입력하면 쓸 수 있는 여러 옵션이 표시
+   * 여기서 --global 옵션을 추가하면 현재 컴퓨터에 있는 모든 저장소에서 같은 사용자 정보를 사용하도록 설정
 
 ```git
 $git config --global user.name "user name"
@@ -18,12 +18,12 @@ $git config --global user.email "usermail@gmail.com"
 ```git
 $ pwd
 ```
-* pwd는 'print working directory'의 줄임말로, 현재 위치의 경로를 알려줌.
+* pwd는 'print working directory'의 줄임말로, 현재 위치의 경로를 알려줌
 
 ```git
 $ ls (option)
 ```
-* ls 명령은 'list'의 줄임말로, 현재 디렉터리에 어떤 파일이나 디렉터리가 있는지 확인할 때 사용.
+* ls 명령은 'list'의 줄임말로, 현재 디렉터리에 어떤 파일이나 디렉터리가 있는지 확인할 때 사용
 
 |옵션|설명|
 |-|-|
@@ -35,7 +35,7 @@ $ ls (option)
 ```git
 $ cd (directory)
 ```
-* cd 명령은 'change directory'의 줄임말로, 터미널 창에서 디렉터리 사이를 이동할 때 사용.
+* cd 명령은 'change directory'의 줄임말로, 터미널 창에서 디렉터리 사이를 이동할 때 사용
 
 |기호 및 디렉터리|설명|
 |-|-|
@@ -48,20 +48,20 @@ $ cd (directory)
 ```git
 $ mkdir (directory)
 ```
-* mkdir 명령은 'make directory'의 줄임말로, 해당 디렉터리에서 하위 디렉터리를 생성.
+* mkdir 명령은 'make directory'의 줄임말로, 해당 디렉터리에서 하위 디렉터리를 생성
 
 ```git
 $ rm (option) (directory)
 ```
-* rm 명령은 'remove'의 줄임말로, 해당 디렉터리 안에 있는 하위 디렉터리를 삭제.
-  * -r 옵션을 붙이면 디렉터리 안에 있는 하위 디렉터리와 파일까지 함께 삭제.
+* rm 명령은 'remove'의 줄임말로, 해당 디렉터리 안에 있는 하위 디렉터리를 삭제
+  * -r 옵션을 붙이면 디렉터리 안에 있는 하위 디렉터리와 파일까지 함께 삭제
 
 ```git
 $ vim (파일이름.확장자)
 ```
-* 리눅스의 기본 편집기인 빔(vim)은 터미널에서 사용할 수 있는 대표적인 편집기.
-  * 빔에는 문서를 작성하는 '입력 모드'와 문서를 저장하는 'ex모드'가 존재.
-  * 입력 모드로 전환하려면 단축키 'I' 또는 'A'를 눌러 입력.
+* 리눅스의 기본 편집기인 빔(vim)은 터미널에서 사용할 수 있는 대표적인 편집기
+  * 빔에는 문서를 작성하는 '입력 모드'와 문서를 저장하는 'ex모드'가 존재
+  * 입력 모드로 전환하려면 단축키 'I' 또는 'A'를 눌러 입력
   * ex 모드로 전환하려면 단축키 'Esc'를 입력
 
 |명령|설명|
@@ -75,9 +75,19 @@ $ vim (파일이름.확장자)
 $ git config --global core.editor "code --wait(변경할 편집기)"
 $ code (파일이름.확장자)
 ```
-* 깃에서 사용하는 편집기를 자신이 익숙하게 사용하는 편집기로 변경 가능.
-  * 편집기 이름 대신 편집기 실행 파일의 경로로 입력 가능.
-  * vscode는 "code --wait"
+* 깃에서 사용하는 편집기를 자신이 익숙하게 사용하는 편집기로 변경 가능
+  * 편집기 이름 대신 편집기 실행 파일의 경로로 입력 가능
+  * vscode는 "code --wait" 입력으로 변경 가능
+
+```git
+$cat (파일이름.확장자)
+```
+* cat 명령은 concatenate의 줄임말로, 터미널 창에서 간단히 문서의 내용을 확인 가능
+|명령|설명|
+|-|-|
+|$ cat 파일|파일의 내용을 화면에 표시|
+|$ cat 파일1, 파일2, ··· 파일n> 새파일|파일 n개를 차례로 연결해서 새로운 파일로 생성|
+|$ cat 파일1>>파일2|파일1의 내용을 파일2 끝에 연결|
 
 
 
