--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -1,5 +1,12 @@
 
- ##  2장 깃(Git) 용어 및 사용방법
+##  2장 깃(Git) 용어 및 사용방법
+
+```git
+$ git init
+```
+
+* init는 initialize(초기화하다)의 약자로, 해당 디렉터 리에서 깃을 사용할 수 있도록 디렉터리를 초기화.
+
 
 
 
