--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -5,7 +5,11 @@
 $ git init
 ```
 
-* init는 initialize(초기화하다)의 약자로, 해당 디렉터 리에서 깃을 사용할 수 있도록 디렉터리를 초기화.
+* init는 initialize(초기화하다)의 약자로, 해당 디렉터 리에서 깃을 사용할 수 있도록 디렉터리를 초기화
+  * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
+  * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
+ 
+
 
 
 
