Update 깃으로 버전 관리하기.md

--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -1,6 +1,6 @@
 
 ##  2장 깃(Git) 용어 및 사용방법
-
+**1.깃 저장소 만들기**
 ```git
 $ git init
 ```
@@ -9,8 +9,12 @@ $ git init
   * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
   * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
  
+**2.버전 만들기**
+* 버전 : 
 
+![img](https://github.com/YouAndMeToo3323/TIL/assets/126636390/ba66b6cb-63d6-49d2-9f30-ed2ecb49e81b)
 
+* 작업트리(working tree) : 
 
 
 
