Update 깃으로 버전 관리하기.md

--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -8,9 +8,10 @@ $ git init
 * init는 initialize(초기화하다)의 약자로, 해당 디렉터 리에서 깃을 사용할 수 있도록 디렉터리를 초기화
   * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
   * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
- 
+
 **2.버전 만들기**
-* 버전 : 
+* 버전 : 문서나 프로그램을를 수정하고 저장할 때마다 생기는 번호 또는 판. 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별.
+ * 
 
 ![img](https://github.com/YouAndMeToo3323/TIL/assets/126636390/ba66b6cb-63d6-49d2-9f30-ed2ecb49e81b)
 
