Update 깃으로 버전 관리하기.md

--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -10,8 +10,8 @@ $ git init
   * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
 
 **2.버전 만들기**
-* 버전 : 문서나 프로그램을를 수정하고 저장할 때마다 생기는 번호 또는 판. 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별.
-  * wd
+* 버전 : 문서나 프로그램을를 수정하고 저장할 때마다 생기는 번호 또는 판. 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별
+  * 깃에서 버전을 관리하면 각 버전마다 작업했던 내용을 확인 가능하고 그 버전으로 되돌아 갈 수 있음
 
 ![img](https://github.com/YouAndMeToo3323/TIL/assets/126636390/ba66b6cb-63d6-49d2-9f30-ed2ecb49e81b)
 
