Update 깃으로 버전 관리하기.md

--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -5,7 +5,7 @@
 $ git init
 ```
 
-* init는 initialize(초기화하다)의 약자로, 해당 디렉터 리에서 깃을 사용할 수 있도록 디렉터리를 초기화
+* init는 initialize(초기화하다)의 약자로, 해당 디렉터리에서 깃을 사용할 수 있도록 디렉터리를 초기화
   * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
   * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
 
@@ -16,7 +16,11 @@ $ git init
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d23a8b2b-13fd-40ea-88a4-6a2db32945a8)
 
 * 작업트리(working tree) : 파일 수정, 저장 등의 작업을 하는 디렉터리로, '작업 디렉터리(working directory)'라고도 불림
-  * 즉 
+
+* 스테이지(stage) : 만들 파일을 버전으로 대기하는 곳으로 스테이지 영역(staging area)라고도 불림. 
+
+*  저장소(repository) : 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳.
+
 
 
 
