--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -1,6 +1,7 @@
 
 ##  2장 깃(Git) 용어 및 사용방법
 **1.깃 저장소 만들기**
+
 ```git
 $ git init
 ```
@@ -9,17 +10,28 @@ $ git init
   * 'Initialized empty Git repository ···'라는 메시지 나타나면 해당 디렉터리에서 깃 사용가능
   * ls 명령을 사용하여 확인하면 '.git' 디렉터리가 존재함
 
-**2.버전 만들기**
+**2. 버전 만들기**
 * 버전 : 문서나 프로그램을를 수정하고 저장할 때마다 생기는 번호 또는 판. 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별
-  * 깃에서 버전을 관리하면 각 버전마다 작업했던 내용을 확인 가능하고 그 버전으로 되돌아 갈 수 있음
+  * 깃에서 버전을 관리하면 각 버전마다 작업했던 내용을 확인 가능하고 그 버전으로 되돌아 갈 수 있음 
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d23a8b2b-13fd-40ea-88a4-6a2db32945a8)
 
 * 작업트리(working tree) : 파일 수정, 저장 등의 작업을 하는 디렉터리로, '작업 디렉터리(working directory)'라고도 불림
 
-* 스테이지(stage) : 만들 파일을 버전으로 대기하는 곳으로 스테이지 영역(staging area)라고도 불림. 
+* 스테이지(stage) : 만들 파일을 버전으로 대기하는 곳으로 스테이지 영역(staging area)라고도 불림
+  * .git 디렉터리 안에 숨은 파일 형태로 존재하는 영역
 
-*  저장소(repository) : 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳.
+* 저장소(repository) : 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳으로 '리포지토리'와 '저장소'로 불림
+  * .git 디렉터리 안에 숨은 파일 형태로 존재하는 영역
+
+#### 1) 버전을 만드는 과정
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/412a2bc4-c1e2-43ed-8343-f8a93bf83a89)
+* 버전할 파일 문서를 수정 및 저장 -> 파일 문서를 스테이지에 추가(add)
+  * 명령어 "
+
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d02ca953-ee28-42ae-9c42-63aa8715b0ca)
+* 
+
 
 
 
