Update 깃으로 버전 관리하기.md

--- a/Git/learn/2장/깃으로 버전 관리하기.md
+++ b/Git/learn/2장/깃으로 버전 관리하기.md
@@ -25,13 +25,20 @@ $ git init
   * .git 디렉터리 안에 숨은 파일 형태로 존재하는 영역
 
 #### 1) 버전을 만드는 과정
+* 
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/99cd4f88-2b55-466d-b44f-b6a5f0549ff7)
+
+
+
+
+
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/412a2bc4-c1e2-43ed-8343-f8a93bf83a89)
 * 버전할 파일 문서를 수정 및 저장 -> 파일 문서를 스테이지에 추가(add)
-  * 명령어 "
+  * 
 
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/d02ca953-ee28-42ae-9c42-63aa8715b0ca)
 * 
-
+ 
 
 
 
