Update 화살표 폴더 실행 불가.md

--- a/Git/화살표 폴더 실행 불가.md
+++ b/Git/화살표 폴더 실행 불가.md
@@ -3,9 +3,9 @@
 
 그 이유는 상위 저장소가 존재하는데 하위 저장소가 존재하기 때문이다. 즉 문제의 폴더 안에 .git 파일이 있는 것이다.
 
-해결방법:
+###  해결방법
 
-#### 1. 컴퓨터에서 숨겨진 파일을 보이게 한다.
+##### 1. 컴퓨터에서 숨겨진 파일을 보이게 한다.
 
 * 숨김파일 표시 방법
 
@@ -17,21 +17,21 @@
   
 그럼 Main 폴더와 Sub폴더 모두에 .git 파일이 있는 것을 확인할 수 있다.
   
-#### 2. 문제의 폴더에 있는 .git 파일을 제거한다. 즉 Sub 폴더 내부의 .git 파일을 삭제한다.
+##### 2. 문제의 폴더에 있는 .git 파일을 제거한다. 즉 Sub 폴더 내부의 .git 파일을 삭제한다.
 
-```git 
+```bash
 $ rm -rf .git 
 ```
 
-#### 3. 스테이지의 파일 제거
+##### 3. 스테이지의 파일 제거
 
 Sub폴더에서 커맨드창(bash창)을 열고, 다음과 같이 명령한다.
-```git
+```bash
 $ git rm --cached . -rf
 ```
-#### 4. add - commit - push 진행
+##### 4. add - commit - push 진행
 
-```git
+```bash
 $ git add .
 $ git commit -m "remove .git file"
 $ git push origin main
@@ -40,8 +40,5 @@ $ git push origin main
 
 정상적으로 폴더에 들어가는지 확인하자.
 
-
-### 참고 블로그
-[->폴더 접근 불가능 - 주발2](https://zzang9ha.tistory.com/346), [하얀 문틈](https://shortcuts.tistory.com/30)
 
 
