--- a/Git/화살표 폴더 실행 불가.md
+++ b/Git/화살표 폴더 실행 불가.md
@@ -1,7 +1,7 @@
 ## GitHub 디렉토리 화살표 표시 -> 폴더 접근 불가능
-간혹 PushGitHub 디렉토리 중 아이콘에 화살표 표시가 된 폴더가 나오는 경우가 있다.
+간혹 PushGitHub 디렉토리 중 아이콘에 화살표 표시가 된 폴더가 나오는 경우가 있습니다.
 
-그 이유는 상위 저장소가 존재하는데 하위 저장소가 존재하기 때문이다. 즉 문제의 폴더 안에 .git 파일이 있는 것이다.
+그 이유는 상위 저장소가 존재하는데 하위 저장소가 존재하기 때문이다. 즉 문제의 폴더 안에 .git 파일이 존재합니다.
 
 ###  해결방법
 
@@ -13,9 +13,9 @@
 
   - 맥(Mac): Finder > command+shift+. 키 입력
   
-원래 저장소가 Main 폴더고, 문제의 폴더는 그 안에있는 Sub 폴더라고 하자. 즉 깃허브에서 화살표 표시가 되는 폴더는 Sub폴더이다.
+원래 저장소가 Main 폴더고, 문제의 폴더는 그 안에있는 Sub 폴더라고 합니다. 즉 깃허브에서 화살표 표시가 되는 폴더는 Sub폴더입니다.
   
-그럼 Main 폴더와 Sub폴더 모두에 .git 파일이 있는 것을 확인할 수 있다.
+그럼 Main 폴더와 Sub폴더 모두에 .git 파일이 있는 것을 확인할 수 있습니다.
   
 ##### 2. 문제의 폴더에 있는 .git 파일을 제거한다. 즉 Sub 폴더 내부의 .git 파일을 삭제한다.
 
@@ -25,7 +25,7 @@ $ rm -rf .git
 
 ##### 3. 스테이지의 파일 제거
 
-Sub폴더에서 커맨드창(bash창)을 열고, 다음과 같이 명령한다.
+Sub폴더에서 커맨드창(bash창)을 열고, 다음과 같이 명령합니다.
 ```bash
 $ git rm --cached . -rf
 ```
@@ -38,7 +38,7 @@ $ git push origin main
 
 ```
 
-정상적으로 폴더에 들어가는지 확인하자.
+정상적으로 폴더에 들어가는지 확인합니다.
 
 
 
