--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -1,15 +1,33 @@
-# test-1
-깃허브 사용법을 연습합니다.
-
-원하는 내용을 입력하세요.
-
-저장소에 대한 소개글을 작성합니다.
-
-![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c)
+깃허브 마크다운 사용법을 간략하게 기록합니다.
 
 ---
-# 제목
 
+## 1. 제목
+* 큰제목: 문서 제목
+```
+제목
+===========
+```
+제목
+===========
+
+* 작은제목: 문서 부제목
+```
+부제목
+------------
+```
+부제목
+------------
+
+* 글머리: 1~6까지만 지원하고 #의 개수가 늘어날수록 작아집니다.
+```
+# 글머리
+## 글머리
+### 글머리
+#### 글머리
+##### 글머리
+###### 글머리
+```
 # 깃허브 살펴보기
 ## 깃허브 살펴보기
 ### 깃허브 살펴보기
@@ -17,25 +35,20 @@
 ##### 깃허브 살펴보기
 ###### 깃허브 살펴보기
 
----
+## 2. 줄바꿈(line break), 개행
+* `<br>`을 이용하거나 엔터키 2번을 사용하여 줄바꿈을 실행합니다.
+```
+줄을 바꿉니다.<br>
+줄을 바꿉니다.
 
-# 텍스트 단락 줄 바꾸기
+줄을 바꿉니다.
+```
+줄을 바꿉니다.<br>
+줄을 바꿉니다.
 
-## 깃허브
+줄을 바꿉니다.
 
-원격 저장소 만들기
-
-origin 연결하기
-
-push
-
-pull vs fetch
-
-협업하기
-
----
-
-# 가로 줄
+## 3. 가로 줄
 ---
 -----------------------
 - - - -
@@ -50,8 +63,6 @@ pull vs fetch
 3. push
 4. pull vs fetch
 5. 협업하기
-
----
 
 # 순서 없는 목록
 1)
@@ -127,7 +138,8 @@ pull vs fetch
 
 # 이미지
 
-[이미지 연습](http://kyrieko.dothome.co.kr/images/first.jpg)
+` ![이미지]
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c)
 
 ---
 
