--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -1,4 +1,4 @@
-깃허브 마크다운 사용법을 간략하게 기록합니다.
+깃허브 마크다운 사용법을 간단하게 작성합니다.
 
 ---
 
@@ -38,17 +38,28 @@
 ## 2. 줄바꿈(line break), 개행
 * `<br>`을 이용하거나 엔터키 2번을 사용하여 줄바꿈을 실행합니다.
 ```
-줄을 바꿉니다.<br>
+줄을 바꿉니다.<br/>
 줄을 바꿉니다.
 
 줄을 바꿉니다.
 ```
-줄을 바꿉니다.<br>
+줄을 바꿉니다.<br/>
 줄을 바꿉니다.
 
 줄을 바꿉니다.
 
-## 3. 가로 줄
+## 3. 수평선  (Horizontal Rule) `<hr/>`
+* 아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력할 때 페이지 나누기 용도로 많이 사용합니다.
+
+```
+---
+-----------------------
+- - - -
+***
+**********************
+* * * *
+```
+
 ---
 -----------------------
 - - - -
@@ -56,15 +67,61 @@
 **********************
 * * * *
 
-# 순서 있는 목록
-
+## 4. 순서 있는 목록(번호)
+* 숫자와 점을 이용하여 목록을 표시합니다.
+```
+1. 원격 저장소 만들기
+2. origin 연결하기
+3. push
+4. pull vs fetch
+5. 협업하기
+```
 1. 원격 저장소 만들기
 2. origin 연결하기
 3. push
 4. pull vs fetch
 5. 협업하기
 
-# 순서 없는 목록
+* 어떤 번호를 무작위로 입력해도 내림차순대로 출력됩니다.
+```
+1. 원격 저장소 만들기
+3. push
+2. origin 연결하기
+5. 협업하기
+4. pull vs fetch
+```
+1. 원격 저장소 만들기
+3. push
+2. origin 연결하기
+5. 협업하기
+4. pull vs fetch
+
+## 5. 순서 없는 목록(글머리 기호: *, +, - 지원)
+
+```
+1)
+- 원격 저장소 만들기
+- origin 연결하기
+- push
+- pull vs fetch
+- 협업하기
+2)
+- 원격 저장소 만들기
+  - origin 연결하기
+  - push
+- pull vs fetch
+  - pull
+  - fetch
+- 협업하기
+3)
++ 원격 저장소 만들기
+  - origin 연결하기
+  - push
+  + pull vs fetch
+    * pull
+    * fetch
++ 협업하기
+```
 1)
 - 원격 저장소 만들기
 - origin 연결하기
@@ -88,24 +145,38 @@
     * fetch
 + 협업하기
 
----
-
-# 텍스트 강조
+## 6. 텍스트 강조
+```
+**GitHub**
+~~GitHub~~
+*GitHub*
+***GitHub***
 
 **GitHub**는 원격 저장소를 제공하~~는 서비스이~~기 때문에
 
 따로 Git을 *설치*하지 않고도
 
-온라인 상에서 Git의 ***버전 관리 기능***을 사용할 수 있습니다.
+온라인 상에서 Git의 ***버전 관리 기능* **을 사용할 수 있습니다.
+```
 
----
+**GitHub**<br/>
+~~GitHub~~<br/>
+*GitHub*<br/>
+***GitHub***
 
-# 인용
+**GitHub**는 원격 저장소를 제공하~~는 서비스이~~기 때문에
 
+따로 Git을 *설치*하지 않고도
+
+온라인 상에서 Git의 ***버전 관리 기능* **을 사용할 수 있습니다.
+
+## 7. 인용
+```
 > The information manager from hell.
 >> git means "global information tracker"
-
----
+```
+> The information manager from hell.
+>> git means "global information tracker"
 
 # 소스 코드
 
