--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -170,12 +170,15 @@
 
 온라인 상에서 Git의 ***버전 관리 기능* **을 사용할 수 있습니다.
 
-## 7. 인용
+## 7. 인용문(BlockQuote)
+*  블럭인용문자는 ">"으로 표현 가능합니다. 또한 인용문 안에서 다른 마크다운 요소를 포함 할수 있습니다.
 ```
 > The information manager from hell.
+> * and
 >> git means "global information tracker"
 ```
 > The information manager from hell.
+>  * and
 >> git means "global information tracker"
 
 # 소스 코드
@@ -183,6 +186,13 @@
 한 줄짜리 소스 코드는 `function add(x,y) {return x + y;} ` 처럼 사용합니다.
 
 소스 코드 삽입하기
+``` javascript
+<script>
+   var now = new Date();
+   var display = new.toLocaleTimesString();
+   document.write("현재 시각은 " + display);
+</scirpt>
+```
 
 ``` javascript
 <script>
