--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -36,7 +36,7 @@
 ###### 깃허브 살펴보기
 
 ## 2. 줄바꿈(line break), 개행
-* `<br>`을 이용하거나 엔터키 2번을 사용하여 줄바꿈을 실행합니다.
+`<br>`을 이용하거나 엔터키 2번을 사용하여 줄바꿈을 실행합니다.
 ```
 줄을 바꿉니다.<br/>
 줄을 바꿉니다.
@@ -49,7 +49,7 @@
 줄을 바꿉니다.
 
 ## 3. 수평선  (Horizontal Rule) `<hr/>`
-* 아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력할 때 페이지 나누기 용도로 많이 사용합니다.
+아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력할 때 페이지 나누기 용도로 많이 사용합니다.
 
 ```
 ---
@@ -68,7 +68,7 @@
 * * * *
 
 ## 4. 순서 있는 목록(번호)
-* 숫자와 점을 이용하여 목록을 표시합니다.
+숫자와 점을 이용하여 목록을 표시합니다.
 ```
 1. 원격 저장소 만들기
 2. origin 연결하기
@@ -82,7 +82,7 @@
 4. pull vs fetch
 5. 협업하기
 
-* 어떤 번호를 무작위로 입력해도 내림차순대로 출력됩니다.
+어떤 번호를 무작위로 입력해도 내림차순대로 출력됩니다.
 ```
 1. 원격 저장소 만들기
 3. push
@@ -171,7 +171,7 @@
 온라인 상에서 Git의 ***버전 관리 기능* **을 사용할 수 있습니다.
 
 ## 7. 인용문(BlockQuote)
-*  블럭인용문자는 ">"으로 표현 가능합니다. 또한 인용문 안에서 다른 마크다운 요소를 포함 할수 있습니다.
+블럭인용문자는 ">"으로 표현 가능합니다. 또한 인용문 안에서 다른 마크다운 요소를 포함할 수 있습니다.
 ```
 > The information manager from hell.
 > * and
@@ -181,38 +181,66 @@
 >  * and
 >> git means "global information tracker"
 
-# 소스 코드
+## 8. 코드
+* 인라인 코드(Inline Code) : 억음부호(백틱: `)를 이용하는 방벙
 
-한 줄짜리 소스 코드는 `function add(x,y) {return x + y;} ` 처럼 사용합니다.
+억음부호를 이용하여 내용을 강조합니다.<br/>
+`억음부호를 이용하여 내용을 강조합니다.`
 
-소스 코드 삽입하기
-``` javascript
-<script>
-   var now = new Date();
-   var display = new.toLocaleTimesString();
-   document.write("현재 시각은 " + display);
-</scirpt>
+* `<pre><code>{code}</code></pre>` 이용방식
+```
+<pre>
+  <code>
+  int main()
+  {
+    printf("Hello World"/n);
+
+    return 0;
+  }
+  </code>
+</pre>
 ```
 
-``` javascript
-<script>
-   var now = new Date();
-   var display = new.toLocaleTimesString();
-   document.write("현재 시각은 " + display);
-</scirpt>
+<pre>
+  <code>
+  int main()
+  {
+    printf("Hello World"/n);
+    
+    return 0;
+  }
+  </code>
+</pre>
+
+* 블럭 코드(block code,"```")을 이용하는 방법
+
 ```
+  int main()
+  {
+    printf("Hello World"/n);
+    
+    return 0;
+  }
+```
+코드블럭코드("```") 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능합니다.
+|언어|마크다운|언어|마크다운|
+|-|-|-|-|
+|Bash|bash|JSON|json|
+|C#|cs|JAVA|java|
+|C++|cpp|JavaScript|javascript|
+|CSS|css|PHP|php|
+|Diff|diff|Perl|perl|
+|HTML,XML|html|Python|python|
+|HTTP|http|Ruby|ruby|
+|Ini|ini|SQL|sql|
 
-코드 입력 끝!
-
----
-
-# 링크
+## 9. 링크
 
 1. 링크 주소 
 <http://www.eayspub.co.kr>
 2. 링크 텍스트 링크 주소
 [이지스퍼블리싱](http://www.easyspub.co.kr)
-3. 링크 텍스트 링크 주소, "부가 설명"
+3. 링크 텍스트 링크 주소, "부가 설명"[
 [구글](http://google.com, "검색 사이트")
 
 ---
