--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -36,16 +36,31 @@
 ###### 깃허브 살펴보기
 
 ## 2. 줄바꿈(line break), 개행
-`<br>`을 이용하거나 엔터키 2번을 사용하여 줄바꿈을 실행합니다.
+* `<br>`을 이용합니다.   
+```
+줄을 바꿉니다.<br/>
+줄을 바꿉니다.
 ```
 줄을 바꿉니다.<br/>
 줄을 바꿉니다.
 
-줄을 바꿉니다.
+* 엔터키 2번을 사용합니다.
 ```
-줄을 바꿉니다.<br/>
 줄을 바꿉니다.
 
+줄을 바꿉니다.
+```
+줄을 바꿉니다.
+
+줄을 바꿉니다.
+
+* 3칸 이상 띄어쓰기(` `)를 사용합니다.
+```
+줄을 바꿉니다._ _ _ 띄어쓰기 3번
+줄을 바꿉니다.
+```
+
+줄을 바꿉니다.   
 줄을 바꿉니다.
 
 ## 3. 수평선  (Horizontal Rule) `<hr/>`
@@ -184,7 +199,7 @@
 ## 8. 코드
 * 인라인 코드(Inline Code) : 억음부호(백틱: `)를 이용하는 방벙
 
-억음부호를 이용하여 내용을 강조합니다.<br/>
+억음부호를 이용하여 내용을 강조합니다.   
 `억음부호를 이용하여 내용을 강조합니다.`
 
 * `<pre><code>{code}</code></pre>` 이용방식
@@ -236,12 +251,21 @@
 
 ## 9. 링크
 
-1. 링크 주소 
-<http://www.eayspub.co.kr>
-2. 링크 텍스트 링크 주소
-[이지스퍼블리싱](http://www.easyspub.co.kr)
-3. 링크 텍스트 링크 주소, "부가 설명"[
-[구글](http://google.com, "검색 사이트")
+* 링크 주소(자동 연결)   
+일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성한다.
+
+외부 링크 : <https://www.example.com/>   
+이메일 링크 : <address@example.com>
+
+* 외부 링크
+
+`[링크 텍스트](링크 주소)`   
+외부 링크 : [테스트주소](https://www.example.com/)
+
+* 참조 링크
+
+` 링크 텍스트 링크 주소, "부가 설명" `   
+참조 링크 : [구글](http://google.com, "검색 사이트")
 
 ---
 
