--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -252,7 +252,7 @@
 ## 9. 링크
 
 * 링크 주소(자동 연결)   
-일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성한다.
+일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성합니다.
 
 외부 링크 : <https://www.example.com/>   
 이메일 링크 : <address@example.com>
@@ -264,18 +264,31 @@
 
 * 참조 링크
 
-` 링크 텍스트 링크 주소, "부가 설명" `   
+`[링크 텍스트](링크 텍스트 링크 주소, "부가 설명")`   
 참조 링크 : [구글](http://google.com, "검색 사이트")
 
----
+## 10. 이미지
 
-# 이미지
-
-` ![이미지]
+* 기본 문법   
+```
+![이미지 텍스트](이미지 주소)   
+* 이미지에 대한 제목을 정할 수 있습니다.
+![이미지 텍스트](이미지 주소 "Optional Title")
+```   
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c)
+![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c "배경화면")
 
----
-
-
+GitHub에서는 사이즈 조절 기능이 없기 때문에 <img width="" height=""></img>를 이용합니다.
+```
+<img src="/path/to/img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="/path/to/img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
+```
+* 참조 링크 사용 방법   
+```
+![이미지 텍스트][id]
+[id]: 이미지 주소 "Optional Title"
+```
+![image][id]   
+[id]: https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c
 
 
