--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -278,17 +278,60 @@
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c)
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c "배경화면")
 
-GitHub에서는 사이즈 조절 기능이 없기 때문에 <img width="" height=""></img>를 이용합니다.
+GitHub에서는 사이즈 조절 기능이 없기 때문에 `<img width="" height=""></img>`를 이용합니다.
 ```
-<img src="/path/to/img.jpg" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
-<img src="/path/to/img.jpg" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
+<img src="이미지 주소" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="이미지 주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
 ```
-* 참조 링크 사용 방법   
+<img src="https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
+<img src="https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>   
+* 참조 링크 사용 방법
 ```
 ![이미지 텍스트][id]
+
 [id]: 이미지 주소 "Optional Title"
 ```
+
 ![image][id]   
-[id]: https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c
+
+[id]: https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c "배경화면"
+
+## 11. 표(Table)
+|(vertical bar) 기호를 통해 테이블을 표현 가능합니다. (가장 좌측, 우측 생략 가능)   
+헤더와 셀을 구분할 때 3개 이상의 -(하이픈, 대시)가 필요 합니다.   
+: (콜론) 기호를 통해 정렬할 수 있습니다
+```
+| Header | value | Description |
+| --: | :-- | :--: |
+| 정렬 | --: | 우측정렬 |
+| 정렬 | :-- | 좌측정렬 |
+| 정렬 | :--: | 가운데정렬 |
+
+ Header | value | Description 
+ :--- | ---: | :---: 
+ 정렬 | ---: | 우측정렬 
+ 정렬 | :--- | 좌측정렬 
+ 정렬 | :---: | 가운데정렬 
+```
+| Header | value | Description |
+| --: | :-- | :--: |
+| 정렬 | --: | 우측정렬 |
+| 정렬 | :-- | 좌측정렬 |
+| 정렬 | :--: | 가운데정렬 |
+
+ Header | value | Description 
+ :-- | --: | :--: 
+ 정렬 | --: | 우측정렬 
+ 정렬 | :-- | 좌측정렬 
+ 정렬 | :--: | 가운데정렬 
+
+---
+## 참고 문서
+* [지옥에서 온 문서 관리자 깃&깃허브 입문](https://www.google.co.kr/books/edition/Do_it_%EC%A7%80%EC%98%A5%EC%97%90%EC%84%9C_%EC%98%A8_%EB%AC%B8%EC%84%9C_%EA%B4%80%EB%A6%AC%EC%9E%90/W6HFDwAAQBAJ?hl=ko&gbpv=0)   
+* [마크다운(Markdown) 사용법](https://gist.github.com/ihoneymon/652be052a0727ad59601)   
+* [마크다운(Markdown) 사용법](https://goddaehee.tistory.com/307)
+
+
+
 
 
