--- a/Git/GitHub/마크다운_사용법.md
+++ b/Git/GitHub/마크다운_사용법.md
@@ -1,4 +1,4 @@
-깃허브 마크다운 사용법을 간단하게 작성합니다.
+깃허브 마크다운 사용법을 작성합니다.
 
 ---
 
@@ -19,7 +19,7 @@
 부제목
 ------------
 
-* 글머리: 1~6까지만 지원하고 #의 개수가 늘어날수록 작아집니다.
+* 글머리: 1~6까지만 지원하고 #의 개수가 늘어날수록 작아진다.
 ```
 # 글머리
 ## 글머리
@@ -36,7 +36,7 @@
 ###### 깃허브 살펴보기
 
 ## 2. 줄바꿈(line break), 개행
-* `<br>`을 이용합니다.   
+* `<br>`을 이용한다.   
 ```
 줄을 바꿉니다.<br/>
 줄을 바꿉니다.
@@ -44,7 +44,7 @@
 줄을 바꿉니다.<br/>
 줄을 바꿉니다.
 
-* 엔터키 2번을 사용합니다.
+* 엔터키 2번을 사용한다.
 ```
 줄을 바꿉니다.
 
@@ -54,7 +54,7 @@
 
 줄을 바꿉니다.
 
-* 3칸 이상 띄어쓰기(` `)를 사용합니다.
+* 3칸 이상 띄어쓰기(` `)를 사용한다.
 ```
 줄을 바꿉니다._ _ _ 띄어쓰기 3번
 줄을 바꿉니다.
@@ -64,7 +64,7 @@
 줄을 바꿉니다.
 
 ## 3. 수평선  (Horizontal Rule) `<hr/>`
-아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력할 때 페이지 나누기 용도로 많이 사용합니다.
+아래 줄은 모두 수평선을 만든다. 마크다운 문서를 미리보기로 출력할 때 페이지 나누기 용도로 많이 사용한다.
 
 ```
 ---
@@ -83,7 +83,7 @@
 * * * *
 
 ## 4. 순서 있는 목록(번호)
-숫자와 점을 이용하여 목록을 표시합니다.
+숫자와 점을 이용하여 목록을 표시한다.
 ```
 1. 원격 저장소 만들기
 2. origin 연결하기
@@ -97,7 +97,7 @@
 4. pull vs fetch
 5. 협업하기
 
-어떤 번호를 무작위로 입력해도 내림차순대로 출력됩니다.
+어떤 번호를 무작위로 입력해도 내림차순대로 출력된다.
 ```
 1. 원격 저장소 만들기
 3. push
@@ -186,7 +186,7 @@
 온라인 상에서 Git의 ***버전 관리 기능* **을 사용할 수 있습니다.
 
 ## 7. 인용문(BlockQuote)
-블럭인용문자는 ">"으로 표현 가능합니다. 또한 인용문 안에서 다른 마크다운 요소를 포함할 수 있습니다.
+블럭인용문자는 ">"으로 표현 가능하며 또한 인용문 안에서 다른 마크다운 요소를 포함할 수 있다.
 ```
 > The information manager from hell.
 > * and
@@ -237,7 +237,7 @@
     return 0;
   }
 ```
-코드블럭코드("```") 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)이 가능합니다.
+코드블럭코드("```") 시작점에 사용하는 언어를 선언하여 문법강조(Syntax highlighting)가 가능
 |언어|마크다운|언어|마크다운|
 |-|-|-|-|
 |Bash|bash|JSON|json|
@@ -252,7 +252,7 @@
 ## 9. 링크
 
 * 링크 주소(자동 연결)   
-일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성합니다.
+일반적인 URL 혹은 이메일주소인 경우 적절한 형식으로 링크를 형성
 
 외부 링크 : <https://www.example.com/>   
 이메일 링크 : <address@example.com>
@@ -272,13 +272,13 @@
 * 기본 문법   
 ```
 ![이미지 텍스트](이미지 주소)   
-* 이미지에 대한 제목을 정할 수 있습니다.
+* 이미지에 대한 제목을 정할 수 있다.
 ![이미지 텍스트](이미지 주소 "Optional Title")
 ```   
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c)
 ![image](https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c "배경화면")
 
-GitHub에서는 사이즈 조절 기능이 없기 때문에 `<img width="" height=""></img>`를 이용합니다.
+GitHub에서는 사이즈 조절 기능이 없기 때문에 `<img width="" height=""></img>`를 이용한다.
 ```
 <img src="이미지 주소" width="450px" height="300px" title="px(픽셀) 크기 설정" alt="RubberDuck"></img><br/>
 <img src="이미지 주소" width="40%" height="30%" title="px(픽셀) 크기 설정" alt="RubberDuck"></img>
@@ -297,9 +297,9 @@ GitHub에서는 사이즈 조절 기능이 없기 때문에 `<img width="" heigh
 [id]: https://github.com/YouAndMeToo3323/TIL/assets/126636390/35961225-978f-4e82-ad84-14223adc2e5c "배경화면"
 
 ## 11. 표(Table)
-|(vertical bar) 기호를 통해 테이블을 표현 가능합니다. (가장 좌측, 우측 생략 가능)   
-헤더와 셀을 구분할 때 3개 이상의 -(하이픈, 대시)가 필요 합니다.   
-: (콜론) 기호를 통해 정렬할 수 있습니다
+|(vertical bar) 기호를 통해 테이블을 표현 가능(가장 좌측, 우측 생략 가능)   
+헤더와 셀을 구분할 때 3개 이상의 -(하이픈, 대시)가 필요   
+: (콜론) 기호를 통해 정렬할 수 있다.
 ```
 | Header | value | Description |
 | --: | :-- | :--: |
