--- a/Unity/UnityHub/에디터_설치오류_해결방법.md
+++ b/Unity/UnityHub/에디터_설치오류_해결방법.md
@@ -1,6 +1,6 @@
 ## 에디터 설치 오류 해결 방법
 제가 유니티 허브에서 유니티 에디터를 설치하는데 이미지와 같이 설치 오류가 발생하면서 다운로드가 중지되었습니다.<br/>
-이를 해결하기 위해 오류를 해결하는 방법을 찾아서 해결했습니다.
+저는 오류에 대한 해결하는 방법을 찾아서 해결하였고 다음에도 발생하면 대비하여 작성했습니다.
 
 <img src="https://github.com/YouAndMeToo3323/TIL/blob/main/Unity/UnityHub/image/%EC%97%90%EB%94%94%ED%84%B0_%EC%84%A4%EC%B9%98_%EC%98%A4%EB%A5%98_%ED%95%B4%EA%B2%B0%EB%B0%A9%EB%B2%951.png?raw=true" width="600px" height="300px" title="에디터 설치 실패" alt="validation failed"></img>
 
@@ -37,11 +37,6 @@
 
 -----------------------------------------------------------------------------
 ## 참고 문서
-[에디터 설치 오류 해결 방법](https://maintaining.tistory.com/entry/Unity-%EC%97%90%EB%94%94%ED%84%B0-%EC%84%A4%EC%B9%98-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0-%EB%B0%A9%EB%B2%95-%EB%AA%A8%EC%9D%8Czip-Validation-Failed)
+[에디터 설치 오류 해결 방법1](https://maintaining.tistory.com/entry/Unity-%EC%97%90%EB%94%94%ED%84%B0-%EC%84%A4%EC%B9%98-%EC%98%A4%EB%A5%98-%ED%95%B4%EA%B2%B0-%EB%B0%A9%EB%B2%95-%EB%AA%A8%EC%9D%8Czip-Validation-Failed)
 
-
-
-
-
-
-
+[에디터 설치 오류 해결 방법2](https://lsme.tistory.com/6)
