--- a/Git/GitHub/화살표_폴더_실행_불가.md
+++ b/Git/GitHub/화살표_폴더_실행_불가.md
@@ -1,11 +1,10 @@
 GitHub 디렉토리 화살표 표시 -> 폴더 접근 불가능
----
+===
 간혹 PushGitHub 디렉토리 중 아이콘에 화살표 표시가 된 폴더가 나오는 경우가 있습니다.
 
 그 이유는 상위 저장소가 존재하는데 하위 저장소가 존재하기 때문이다. 즉 문제의 폴더 안에 .git 파일이 존재합니다.
 
-####  해결방법
-
+###  해결방법
 ##### 1. 컴퓨터에서 숨겨진 파일을 보이게 한다.
 
 * 숨김파일 표시 방법
