--- a/Unity/UnityHub/에디터_설치오류_해결방법.md
+++ b/Unity/UnityHub/에디터_설치오류_해결방법.md
@@ -1,4 +1,5 @@
-## 에디터 설치 오류 해결 방법
+에디터 설치 오류 해결 방법
+===
 제가 유니티 허브에서 유니티 에디터를 설치하는데 이미지와 같이 설치 오류가 발생하면서 다운로드가 중지되었습니다.<br/>
 저는 오류에 대한 해결하는 방법을 찾아서 해결하였고 다음에도 발생하면 대비하여 작성했습니다.
 
