--- a/C/배열.md
+++ b/C/배열.md
@@ -6,9 +6,9 @@
 ```cpp
 int oneDimArr[4];
 
-int       배열을 이루는 요소(변수)의 자료형
+/*int       배열을 이루는 요소(변수)의 자료형
 oneDimArr	배열의 이름
-[4]       배열의 길이(변수도 가능) 
+[4]       배열의 길이(변수도 가능) */
 
 oneDimArr[0] = 0;
 oneDimArr[1] = 0;
@@ -17,9 +17,12 @@ oneDimArr[3] = 0;
 ```
 
 * sizeof(변수) : 바이트 단위의 배열 크기(변수의 크기)
-  * 문자열에 사용 시
+  * 배열의 길이를 계산할 때 사용가능.(단 문자열에 대한 배열의 길이는 while문 사용)
 ```cpp
-sizeof(int) = 4 
+int arr[5] = {0,1,1,1,1};
+sizeof(int) = 4;
+arrLen= sizeof(arr)/sizeof(int); //arrLen=5
+
 ```
 
 * 문자에 대한 배열 표기
@@ -37,6 +40,12 @@ char arr[] = {'g','o',...,'!','\0'};  //선언 및 초기화
 char arr[] = "good morning!";         //선언 및 초기화
 scanf("%s",arr);              //입력
 printf("%s",arr);             //출력
+
+int len =0;
+while(arr[len] !=0)
+{
+ len++;
+} //len은 문자열(널문자제외)에 대한 배열의 길이
 ```
 **"scanf함수 호출문 구성 시, 데이터를 저장할 변수의 이름 앞에는 &연산자를 붙여줘야 한다. 그러나 문자열을 입력 받는 배열의 이름 앞에는 &연산자를 붙이지 않는다."**
 
