--- a/C/1차차원_배열.md
+++ b/C/1차차원_배열.md
@@ -49,7 +49,7 @@ while(arr[len] !=0)
 ```
 **"scanf함수 호출문 구성 시, 데이터를 저장할 변수의 이름 앞에는 &연산자를 붙여줘야 한다. 그러나 문자열을 입력 받는 배열의 이름 앞에는 &연산자를 붙이지 않는다."**
 
-* 널(null) : 문자열 끝에 자동으로 삽입되는 특수문자 **'\0'** 을 **널(null)문자**라 한다.
+* 널(null) : 문자열 끝에 자동으로 삽입되는 특수문자 **'\0'** 을 **널(null)문자**라 한다.(\0은 아스키 코드값으로 0을 뜻함)
 * 널(null)문자가 필요한 이유 : 메모리상에서 문자열은 이진 데이터로 저장되기 때문에 문자열의 시작과 끝이 표시되어 있지 않다면 **문자열을 구분하는 것은 불가능**하다.
  그래서 널 문자를 이용해서 **문자열의 끝을 표시하는 것**.
 
