--- a/C/조건문과_반복문.md
+++ b/C/조건문과_반복문.md
@@ -88,10 +88,16 @@ while(true)
 #### continue 
 * continue문의 이후는 생략을 하고, 다시 실행을 하게 된다.
 ```cpp
-if(num<10)
+for(i=0;i<10;i++)
 {
-  num++;
-  continue;
+	for(j=1;j<10;j++)
+	{
+		if(i%3==0)
+		{
+			continue;	//3의 배수를 빼고 출력
+		}
+		printf("%d * %d = %d",i,j,i*j);
+	}
 }
 ```
 
