--- a/C/1차원_배열.md
+++ b/C/1차원_배열.md
@@ -18,6 +18,8 @@ oneDimArr[3] = 0;
 
 * sizeof(변수) : 바이트 단위의 배열 크기(변수의 크기)
   * 배열의 길이를 계산할 때 사용가능.(단 문자열에 대한 배열의 길이는 while문 사용)
+  * C언어에서 sizeof연산자와 size_t형 변수를 출력할 때는 서식지정자에 z를 붙임(size의 z,%zd).
+
 ```cpp
 int arr[5] = {0,1,1,1,1};
 sizeof(int) = 4;
