--- a/C/자료형과_상수.md
+++ b/C/자료형과_상수.md
@@ -37,3 +37,55 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 |ULL|unsigned long long|unsigned long long n = 5768ULL|
 |F|float|float f = 3.15F|
 |L|long double|long double f = 5.789L|
+
+
+
+ printf함수와 scanf함수
+----
+
+#### printf함수
+
+* 특수문자의 종류
+
+|특수문자|의미하는바|특수문자|의미하는바|
+|-|-|-|-|
+|\a|경고음|\t|수평 탭|
+|\b|백스페이스(backspacse)|\v|수직 탭|
+|\f|폼 피드(form feed)|\'|작은 따옴표 출력|
+|\n|개 행(new line)|\"|큰 따옴표 출력|
+|\r|캐리지 리턴(carriage return)|\?|물음표 출력|
+| \ \ |역슬래쉬 출력|
+
+* 서식문자의 종류와 의미
+
+|서식문자|출력 대상(자료형)|출력 형태|서식문자|출력 대상(자료형)|출력 형태|
+|-|-|-|-|-|-|
+|%d|char, short, int|부호 있는 10진수 정수|%u|unsigned int|부호 없는 10진수 정수|
+|#ld|long|부호 있는 10진수 정수|%o|unsigned int|부호 없는 8진수 정수|
+|%lld|long long|부호 있는 10진수 정수|%x, %X|unsigned int|부호 없는 16진수 정수|
+|%f|float, double|10진수 방식의 부동소수점 실수|%e, %E|float, double|e또는 E방식의 부동소수점 실수|
+|%Lf|long double|10진수 방식의 부동소수점 실수|%g, %G|float, double|값에 따라 %f와 %e 사이에서 선택|
+|%c|char, short, int|값에 대응하는 문자|%s|char*|문자열|
+|%p|void*|포인터의 주소 값|
+
+* 필드 폭을 지정하여 정돈된 출력 보이기
+
+```cpp
+%8d		필드 폭을 8칸 확보하고, 오른쪽 정렬해서 출력을 진행
+%-8d	필드 폭을 8칸 확보하고, 왼쪽 정렬해서 출력을 진행
+```
+
+#### scanf함수
+
+* 서식문자의 종류와 의미
+
+|서식문자|입력 대상|입력 형태|서식문자|입력 대상|입력 형태|
+|-|-|-|-|-|-|
+|%hhd|char|부호 있는 10진수 정수|%hhu|char|부호 없는 10진수 정수|
+|%hd|short|부호 있는 10진수 정수|%hu|short|부호 없는 10진수 정수|
+|%d|int|부호 있는 10진수 정수|%u|int|부호 없는 10진수 정수|
+|%hho|char|부호 없는 8진수 정수|%hhx|char|부호 없는 16진수 정수|
+|%ho|short|부호 없는 8진수 정수|%hx|short|부호 없는 16진수 정수|
+|%o|int|부호 없는 8진수 정수|%x|int|부호 없는 16진수 정수|
+|%f|float|10진수 방식의 부동소수점 실수|%lf|double|10진수 방식의 부동소수점 실수|
+|%Lf|long double|10진수 방식의 부동소수점 실수|
