--- a/C/데이터의_표현.md
+++ b/C/데이터의_표현.md
@@ -8,33 +8,32 @@
 * 2진수 : 두 개의 기호(대표적으로 0과 1)를 이용해서 데이터를 표현
   * 모든 수를 0과 1로 표현하며 1을 초과하면 자릿수가 증가한다(0, 1, 10, 11, 100,...).
 
-8진수 : 여덟 개의 기호(0 ~ 7)를 이용해서 표현
-모든 수를 0에서부터 7까지 표현하며 7을 초과하면 자릿수가 증가한다(1,2,3,...,7,10,11,...,17,20,21,...).
-변수에 대한 선언을 0(숫자)으로 시작하면 8진수로 인식
+* 8진수 : 여덟 개의 기호(0 ~ 7)를 이용해서 표현
+  * 모든 수를 0에서부터 7까지 표현하며 7을 초과하면 자릿수가 증가한다(1,2,3,...,7,10,11,...,17,20,21,...).
+  * 변수에 대한 선언을 0(숫자)으로 시작하면 8진수로 인식
 
-10진수 : 열 개의 기호(0 ~ 9)를 이용해서 표현
-모든 수를 0에서부터 9까지 표현하며 9를 초과하면 자릿수가 증가한다.
-변수에 대한 특별한 선언이 없으면 10진수로 인식
+* 10진수 : 열 개의 기호(0 ~ 9)를 이용해서 표현
+  * 모든 수를 0에서부터 9까지 표현하며 9를 초과하면 자릿수가 증가한다.
+  * 변수에 대한 특별한 선언이 없으면 10진수로 인식
 
-16진수 : 16개의 기호(0 ~ 9,A ~ F)를 이용해서 표현
-모든 수를 숫자 0에서부터 9와 기호 A에서부터 F까지 표현하며 F를 초과하면 자릿수가 증가한다(숫자는 10진수와 동일하게 표현하고 10은 A부터 15를 F까지 표현).
-변수에 대한 선언을 0x로 시작하면 16진수로 인식
-
+* 16진수 : 16개의 기호(0 ~ 9,A ~ F)를 이용해서 표현
+  * 모든 수를 숫자 0에서부터 9와 기호 A에서부터 F까지 표현하며 F를 초과하면 자릿수가 증가한다(숫자는 10진수와 동일하게 표현하고 10은 A부터 15를 F까지 표현).
+  * 변수에 대한 선언을 0x로 시작하면 16진수로 인식
 ```cpp
 int num1 = 10;	//정수 10
-int num2 = 012	//정수 10(8진수)
-int num3 = 0xA	//정수 10(16진수)
+int num2 = 012	//정수 10( 8진수 )
+int num3 = 0xA	//정수 10( 16진수 )
 ```
 
-데이터에 대한 정수의 표현방식
+#### 데이터에 대한 정수의 표현방식
 
-부호비트(Most Significant Bit,MSB) 
-정수의 가장 왼쪽에 존재하는 비트로서 양수라면 0, 음수라면 1을 저장하여 부호를 표시.
-가장 왼쪽 비트를 제외한 나머지 비트들은 데이터의 크기를 나타낸다.
+* 부호비트(Most Significant Bit,MSB) 
+  * 정수의 가장 왼쪽에 존재하는 비트로서 양수라면 0, 음수라면 1을 저장하여 부호를 표시.
+  * 가장 왼쪽 비트를 제외한 나머지 비트들은 데이터의 크기를 나타낸다.
 
-2의 보수법
-정수 표현방식에서 음의 정수를 표현할 때 사용법으로서, 1의 보수를 취하고 1을 더하는 과정이 2의 보수를 구하는 과정이기 때문이다.
-양의 정수와 음의 정수를 더하면 0이 나와야 한다.
+* 2의 보수법
+  * 정수 표현방식에서 음의 정수를 표현할 때 사용법으로서, 1의 보수를 취하고 1을 더하는 과정이 2의 보수를 구하는 과정이기 때문이다.
+  * 양의 정수와 음의 정수를 더하면 0이 나와야 한다.
 
 ```
 0 0 0 1 1 1 1		//정수 15
