--- a/C/데이터의_표현.md
+++ b/C/데이터의_표현.md
@@ -48,7 +48,71 @@ int num3 = 0xA	//정수 10( 16진수 )
 
 0이 나오는지 확인
   0 0 0 1 1 1 1
-+   1 1 1 0 0 0 1
++ 1 1 1 0 0 0 1
 -----------------
   0 0 0 0 0 0 0
 ```
+
+#### 데이터에 대한 실수의 표현방식
+	
+* 고정 소수점 방식<br/>
+: 고정 소수점은 소수점을 사용하여 고정된 자리수의 소수를 나타내는 것이다. 한정된 메모리에서 부동소수점 방식보다 좁은 범위의 수만 나타낼 수 있다.
+
+```cpp
+float = 23.89	//정수.소수
+```
+
+부동 소수점 방식
+실수를 컴퓨터상에서 근사하여 표현할 때 소수점의 위치를 고정하지 않고 그 위치를 나타내는 수를 따로 적는 것으로,
+유효숫자를 나타내는 가수(假數)와 소수점의 위치를 풀이하는 지수(指數)로 나누어 표현한다.
+고정 소수점 방식보다 넓은 범위의 수를 나타낼 수 있어 과학기술 계산에 많이 이용
+
+```
+32비트 부동 소수점 형식
+1비트 : 부호(0은 양수, 1은 음수)
+8비트 : 지수 부분
+23비트 : 가수 부분
+
+64비트 부동 소수점 형식
+1비트 : 부호
+11비트 : 지수 부분
+52비트 : 가수 부분
+```
+
+#### 비트 연산자
+
+|연산자|연산자의 기능|결합방향|
+|-|-|-|
+|&|비트단위로 AND 연산을 한다.(예시: num1 & num2;)|->|
+|\||비트단위로 OR 연산을 한다.(예시: num1 \| num2;)|->|
+|^|비트단위로 XOR연산을 한다.(예시: num1 ^ num2;)|->|
+|~|단항 연산자로서 피연산자의 모든 비트를 반전시킨다.(예시: ~num; num은 변화 없음, 반전 결과만 반환)|<-|
+|<<|피연산자의 비트 열을 왼쪽으로 이동시킨다.(예시: num << 2; num은 변화 없음, 두 칸 왼쪽 이동 결과만 반환)|->|
+|>>|피연산자의 비트 열을 오른쪽으로 이동시킨다.(예시: num >> 2; num은 변화 없음, 두 칸 오른쪽 이동 결과만 반환)|->|
+
+* 비트 연산자를 사용하여 정수를 2진수로 변환
+
+```cpp
+int i = 0;	// 4바이트에 대한 비트 개수
+int num = 0;	// 정수
+int bit = 0;	// 2진수(비트 단위)
+
+// 사용자로부터 10진수 입력 받기
+printf("10진수를 입력하세요: ");
+scanf("%d", &num);
+
+// 10진수를 2진수로 변환하여 출력
+printf("2진수: ");
+
+// 각 비트를 확인하여 출력
+for (i = sizeof(int) * 8 - 1; i >= 0; i--)
+{
+ bit = (num >> i) & 1;  //>>비트 연산자는 i만큼 이동한다(i만큼 2로 나눈다).
+ printf("%d", bit);     //2진수 출력
+}
+printf("\n");
+
+```
+
+
+
