--- a/C/포인터.md
+++ b/C/포인터.md
@@ -1,17 +1,19 @@
 포인터 
 ===
 
+### 1. 변수 형태의 포인터
 #### 포인터 변수
 * 메모리의 주소 값을 저장하기 위한 변수.
 ```cpp
-//int*	int형 변수의 주소값을 저장하는 포인터 변수의 선언(int형 포인터)
-//pnum	포인터 변수의 이름(int형 포인터 변수 pnum)
-int* pnum;
+int* pnum;  //"ptr"이라는 변수를 선언하고, 이 변수가 정수를 가리킬 수 있는 포인터임을 나타낸다.
+
+int*	  //포인터 변수를 선언할 때 사용하는 타입 지정자(int형 포인터)
+pnum	  //포인터 변수의 이름(int형 포인터 변수 pnum)
 
 //포인터 변수의 선언에 있어서 *연산자의 위치는 상관이 없다.
 double * pnum1;
 double* pnum1;
-double *pnum1;		
+double *pnum1;
 ```
 
 #### &연산자
@@ -19,8 +21,24 @@ double *pnum1;
 <br/>`pnum = &num;`
 
 #### *연산자
-* '포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자'이다.<br/>
+* '포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자'이다. 이를 "간접 참조" 또는 "역참조"라고 한다.<br/>
 `*pnum = 20;		//num = 20;(pnum = &num, *pnum이 가리키는 num의 저장된 값이 변경됨)`
+
+#### 간접 참조에 대한 사용 및 이유
+**1) 함수 호출 및 반환 값** 
+* 포인터를 사용하여 함수로부터 여러 값을 반환하거나 함수에 값을 전달할 수 있다.<br/> 함수 인수로 포인터를 사용하면 원래 변수를 수정할 수 있다.
+
+**2) 동적 메모리 할당**
+
+* 포인터를 사용하여 힙(heap) 메모리에서 동적으로 메모리를 할당하고 해제할 수 있다.<br/> 동적 할당을 통해 프로그램이 실행 중에 필요한 메모리를 동적으로 관리할 수 있다.
+
+**3) 데이터 구조 및 배열**
+
+* 포인터를 사용하여 배열의 요소 또는 데이터 구조의 멤버에 접근할 수 있다.<br/> 이것은 데이터 구조와 배열을 효율적으로 조작하는 데 도움이 된다.
+
+**4) 메모리 조작** 
+
+* 포인터를 사용하여 메모리 주소를 직접 조작하고 데이터를 복사하거나 이동하는 데 사용할 수 있다.<br/> 이는 낮은 수준의 메모리 조작이 필요한 경우에 유용하다.
 
 #### 포인트의 형(Type)
 * int, char, double과 같이 변수의 선언 및 구분에 사용되는 키워드를 '자료형'이라 하듯이 포인터 변수의 선언 및 구분에 사용되는<br/>int*, char*, double* 등을 가리켜 말한다.
