--- a/C/포인터.md
+++ b/C/포인터.md
@@ -21,7 +21,7 @@ double *pnum1;
 <br/>`pnum = &num;`
 
 #### *연산자
-* '포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자'이다. 이를 "간접 참조" 또는 "역참조"라고 한다.<br/>
+* '포인터가 가리키는 메모리 공간에 접근할 때 사용하는 연산자'이다. 이를 **"간접 참조"** 또는 **"역참조"** 라고 한다.<br/>
 `*pnum = 20;		//num = 20;(pnum = &num, *pnum이 가리키는 num의 저장된 값이 변경됨)`
 
 #### 간접 참조에 대한 사용 및 이유
@@ -41,14 +41,14 @@ double *pnum1;
 * 포인터를 사용하여 메모리 주소를 직접 조작하고 데이터를 복사하거나 이동하는 데 사용할 수 있다.<br/> 이는 낮은 수준의 메모리 조작이 필요한 경우에 유용하다.
 
 #### 포인트의 형(Type)
-* int, char, double과 같이 변수의 선언 및 구분에 사용되는 키워드를 '자료형'이라 하듯이 포인터 변수의 선언 및 구분에 사용되는<br/>int*, char*, double* 등을 가리켜 말한다.
+* int, char, double과 같이 변수의 선언 및 구분에 사용되는 키워드를 **'자료형'** 이라 하듯이 포인터 변수의 선언 및 구분에 사용되는<br/>int*, char*, double* 등을 가리켜 말한다.
 * 포인터 변수도 값을 저장하는 변수이기 때문에 '자료형'의 범주에 포함된다.
 
 ```cpp
 type*		//type형 포인터
 type* ptr	//type형 포인터 변수 ptr
 ```
-
+### 2.상수 형태의 포인터
 #### 배열의 이름
 * 포인터로서 그 값을 바꿀 수 없는 '상수 형태의 포인터'이다. 배열의 이름도 포인터이기 때문에 배열의 이름을 피연산자로 하는 *연산이 가능.
 * 1차원 배열이름의 포인터형은 배열의 이름이 가리키는 대상을 기준으로 결정.
@@ -59,12 +59,27 @@ type* ptr	//type형 포인터 변수 ptr
 |무엇을 나타내거나 저장하는가?|메모리의 주소 값|메모리의 주소 값|
 |주소 값의 변경이 가능한가?|가능하다|불가능하다|
 
-```
+```cpp
 int arr[i] : arr[i]는 int형 포인터 상수
-&arr[i]    : arr[i]에 대한 메모리의 주소값
-arr[i]     : arr[i]에 저장된 값
-ptr        : ptr이 가리키는 대상에 대한 메모리의 주소값(ptr = &arr[i];)
-*ptr       : ptr이 가리키는 대상의 값(*ptr = arr[i];)
+&arr[i] : arr[i]에 대한 메모리의 주소값
+arr[i] : arr[i]에 저장된 값
+arr[i] == *(arr+i)	//arr[i]는 *(arr+i)와 같다.
 
-ptr++      : ptr이 가리키는 대상의 
+ptr : ptr이 가리키는 대상에 대한 메모리의 주소값(ptr = &arr[i];)
+*ptr : ptr이 가리키는 대상의 값(*ptr = arr[i];)
+
+//포인터를 배열의 이름처럼 사용가능
+*ptr = &arr[0];
+ptr[0] = arr[0];
+ptr[1] = arr[1];
+...
+
+*(ptr++) = 20;  //현재 ptr이 가리키는 위치(arr[0])에 20을 할당한 후 ptr을 1만큼 증가
+*(++ptr) = 20;  //ptr을 1만큼 증가시킨 후, 그 위치(arr[1])에 20을 할당
+*(ptr+1) =20;   //ptr에 저장된 값은 변경되지 않음
 ```
+
+
+
+
+
