--- a/C/포인터.md
+++ b/C/포인터.md
@@ -42,7 +42,7 @@ double *pnum1;
 
 #### 포인트의 형(Type)
 * int, char, double과 같이 변수의 선언 및 구분에 사용되는 키워드를 **'자료형'** 이라 하듯이 포인터 변수의 선언 및 구분에 사용되는<br/>int*, char*, double* 등을 가리켜 말한다.
-* 포인터 변수도 값을 저장하는 변수이기 때문에 '자료형'의 범주에 포함된다.
+* 포인터 변수도 값을 저장하는 변수이기 때문에 **'자료형'의 범주**에 포함된다.
 
 ```cpp
 type*		//type형 포인터
@@ -50,7 +50,7 @@ type* ptr	//type형 포인터 변수 ptr
 ```
 ### 2.상수 형태의 포인터
 #### 배열의 이름
-* 포인터로서 그 값을 바꿀 수 없는 '상수 형태의 포인터'이다. 배열의 이름도 포인터이기 때문에 배열의 이름을 피연산자로 하는 *연산이 가능.
+* 포인터로서 그 값을 바꿀 수 없는 **'상수 형태의 포인터'** 이다. 배열의 이름도 포인터이기 때문에 배열의 이름을 피연산자로 하는 *연산이 가능.
 * 1차원 배열이름의 포인터형은 배열의 이름이 가리키는 대상을 기준으로 결정.
 
 |비교조건|포인터 변수|배열의 이름|
@@ -79,7 +79,36 @@ ptr[1] = arr[1];
 *(ptr+1) =20;   //ptr에 저장된 값은 변경되지 않음
 ```
 
+#### 두 가지 형태의 문자열 표현
 
+```cpp
+char str1[] = "My String";  //변수 형태의 문자열(상수형태의 포인터), 가리키는 대상을 변경할 수 없지만 문자열의 일부를 변경 가능
+str1 = "Your String";       //문자열 변경 실패
+str1[0] = 'B';              //호출한 문자열(배열)에 해당하는 값 변경
+
+char* str2 = "Your String";  //상수 형태의 문자열(변수형태의 포인터), 가리키는 대상을 변경할 수 있지만 문자열의 일부를 변경 불가능 
+str2 = "Our String";         //str2이 가리키는 대상을 문자열 "Our String"(주소값)으로 변경
+str2[0] = 'T';               //문자열 일부(값) 변경 실패
+```
+
+#### 포인터 배열
+* 포인터 변수로 이루어지고 주소 값의 저장이 가능한 배열을 말한다. 포인터 배열의 선언방식은 기본 자료형 배열의 선언방식과 동일하다.
+
+```cpp
+int* arr1[20];     //길이가 20인 int형 포인터 배열 arr1
+double* arr2[30];  //길이가 30인 double형 포인터 배열 arr2
+
+int num1 = 10, num2 = 20, num3 = 30;
+int* arr[3] = { &num1, &num2, &num3 };  //포인터 배열 arr3에 선언한 변수의 주소값으로 선언 및 초기화
+```
+
+#### 문자열을 저장하는 포인터 배열
+* 문자열의 주소 값을 저장할 수 있는 배열로서 사실상 char형 포인터 배열이다.
+* 큰따옴표로 묶어서 표현되는 문자열은 그 형태에 상관없이 메모리 공간에 저장된 후 그 주소 값이 반환된다.
+
+```cpp
+char* strArr[3]={ "Simple", "String", "Array" };  //길이가 3인 char형 포인터 배열
+```
 
 
 
