--- a/C/데이터의_표현.md
+++ b/C/데이터의_표현.md
@@ -2,7 +2,7 @@
 ===
 
 
-#### 진수에 대한 서식문자와 표기방법
+### 진수에 대한 서식문자와 표기방법
 * n진수 : '수(number)'를 표현하는 도구 또는 진법으로 나타내어진 수
 
 * 2진수 : 두 개의 기호(대표적으로 0과 1)를 이용해서 데이터를 표현
@@ -25,7 +25,7 @@ int num2 = 012	//정수 10( 8진수 )
 int num3 = 0xA	//정수 10( 16진수 )
 ```
 
-#### 데이터에 대한 정수의 표현방식
+### 데이터에 대한 정수의 표현방식
 
 * 부호비트(Most Significant Bit,MSB) 
   * 정수의 가장 왼쪽에 존재하는 비트로서 양수라면 0, 음수라면 1을 저장하여 부호를 표시.
@@ -53,7 +53,7 @@ int num3 = 0xA	//정수 10( 16진수 )
   0 0 0 0 0 0 0
 ```
 
-#### 데이터에 대한 실수의 표현방식
+### 데이터에 대한 실수의 표현방식
 	
 * 고정 소수점 방식<br/>
 : 고정 소수점은 소수점을 사용하여 고정된 자리수의 소수를 나타내는 것이다. 한정된 메모리에서 부동소수점 방식보다 좁은 범위의 수만 나타낼 수 있다.
@@ -79,7 +79,7 @@ float = 23.89	//정수.소수
 52비트 : 가수 부분
 ```
 
-#### 비트 연산자
+### 비트 연산자
 
 |연산자|연산자의 기능|결합방향|
 |-|-|-|
