--- a/C/자료형과_상수.md
+++ b/C/자료형과_상수.md
@@ -1,6 +1,6 @@
 자료형과 상수
 =====
-#### 기본 자료형의 종류와 데이터 범위
+### 기본 자료형의 종류와 데이터 범위
 
 |자료형|크기|값의 표현범위|
 |-|-|-|
@@ -15,7 +15,7 @@
 
 * 정수형 자료형의 이름에 한해서 unsigned선언을 추가하면 0이상의 값만 표현하는 자료형이 되어서<br/>표현할 수 있는 값의 범위가 양의 정수 방향으로 두 배 더 넓어진다(unsigned char: 0이상 255이상).
 
-#### 상수
+### 상수
 
 * 리터널(Literal)상수 : 변수와 달리 이름이 없는 상수를 뜻함
 ```cpp
@@ -23,7 +23,7 @@ int num1 = 3+4;			//3과 4는 상수(리터널 상수), num1은 변수
 int num2 = 7 + num1;		//7은 상수, num1과 num2는 변수
 double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 ```
-#### 접미사를 이용한 다양한 상수의 표현
+### 접미사를 이용한 다양한 상수의 표현
 
 * 8바이트 크기의 데이터(상수)를 4바이트 크기의 데이터(상수)에 저장하면 데이터가 잘려나갈 수 있으므로 접미사를 이용하여 저장
 * 접미사들은 대소문자를 구분하지 않으므로 눈에 잘 띄도록 상황에 맞게 대소문자를 선택
@@ -43,7 +43,7 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
  printf함수와 scanf함수
 ----
 
-#### printf함수
+### printf함수
 
 * 특수문자의 종류
 
@@ -75,7 +75,7 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 %-8d	필드 폭을 8칸 확보하고, 왼쪽 정렬해서 출력을 진행
 ```
 
-#### scanf함수
+### scanf함수
 
 * 서식문자의 종류와 의미
 
