--- a/C/포인터.md
+++ b/C/포인터.md
@@ -135,7 +135,7 @@ int main()
 * 배열의 길이를 계산해서 인자로 전달하는 이유<br/>
 배열의 주소 값을 인자로 전달받은 매개변수는 **포인터 변수**이기 때문에 이를 대상으로 **sizeof 연산을 할 경우 배열의 크기가 반환되지 않고 포인터 변수의 크기가 반환된다**.<br/>그러므로 함수 내에서는 인자로 전달된 배열의 길이를 계산할 수가 없기 때문에 **배열의 크기나 길이정보도 함께 인자로 전달해야 한다**.
 
-#### Call-by-value
+### Call-by-value
 함수를 호출할 때 단순히 값을 전달하는 형태의 함수호출을 가리켜 말함
 
 ```cpp
@@ -160,7 +160,7 @@ int main()
 }
 ```
 
-#### Call-by-reference
+### Call-by-reference
 메모리의 접근에 사용되는 주소 값을 전달하는 형태의 함수호출을 가리켜 말함
 
 ```cpp
