--- a/C/포인터.md
+++ b/C/포인터.md
@@ -87,8 +87,8 @@ char* str2 = "Your String";  //상수 형태의 문자열(변수형태의 포인
 str2 = "Our String";         //str2이 가리키는 대상을 문자열 "Our String"(주소값)으로 변경
 str2[0] = 'T';               //문자열 일부(값) 변경 실패
 ```
-
-#### 포인터 배열
+----
+### 포인터 배열
 포인터 변수로 이루어지고 주소 값의 저장이 가능한 배열을 말한다. 포인터 배열의 선언방식은 기본 자료형 배열의 선언방식과 동일하다.
 
 ```cpp
@@ -134,7 +134,7 @@ int main()
 
 * 배열의 길이를 계산해서 인자로 전달하는 이유<br/>
 배열의 주소 값을 인자로 전달받은 매개변수는 **포인터 변수**이기 때문에 이를 대상으로 **sizeof 연산을 할 경우 배열의 크기가 반환되지 않고 포인터 변수의 크기가 반환된다**.<br/>그러므로 함수 내에서는 인자로 전달된 배열의 길이를 계산할 수가 없기 때문에 **배열의 크기나 길이정보도 함께 인자로 전달해야 한다**.
-
+---
 ### Call-by-value
 함수를 호출할 때 단순히 값을 전달하는 형태의 함수호출을 가리켜 말함
 
