--- a/C/다차원_배열.md
+++ b/C/다차원_배열.md
@@ -31,3 +31,22 @@ int arr5[3][3] = {1, 2, 3, 4, 5, 6, 7};		//부족한 영역은 0으로 초기화
 int arr6[][4] = {1, 2, 3, 4, 5, 6, 7, 8};	//가로의 길이가 4이므로 세로의 길이는 2가 된다(자동으로 arr6[2][4]).
 int arr7[][2] = {1, 2, 3, 4, 5, 6, 7, 8};	//가로의 길이가 2이므로 세로의 길이는 4가 된다(자동으로 arr7[4][2]).
 ```
+### 3차원 배열
+* 흔히 사용되는 배열이 아니므로 매우 제한적인 상황에서 사용된다.
+* 가로(1차원), 세로(2차원), 높이(3차원)으로 이루어진 직육면체 형태의 배열로서 여러 개의 2차원 배열이 모여있는 형태로 이해하는 것이<br/>낫다.
+
+```cpp
+int arr1[2][3][4];	//높이 2, 세로 3, 가로 4인 int형 3차원 배열
+double arr2[5][5][5];	//높이, 세로, 가로가 모두 5인 double형 3차원 배열	
+int arr3[3][3][2] = {
+  {
+    {1,2},
+    {3,4},
+    {5,6}
+  },
+  {
+    {2,3},
+    ...
+  }
+};
+```
