--- a/C/포인터의_포인터.md
+++ b/C/포인터의_포인터.md
@@ -45,4 +45,9 @@ int arr[20];		//배열이름 arr은 int형 포인터
 * 삼중 포인터 변수 이상부터는 프로그램에서 작성할 때마다 등장하는 포인트형이 아니여서 만약 등장한다면<br/>**포인터의 오용 및 남용**은 아닌지, **잘못된 방식으로 접근하고 있는 것**은 아닌지 확인해 볼 필요가 있다.
 ```cpp
 int*** tptr;	//tptr은 삼중 포인터 변수
+
+int num =100;
+int* ptr = &num;	//int* ptr = (int) &num
+int** dptr = &ptr;	//int** dptr = (int*) &ptr
+int*** tptr = &dptr;	//int*** tptr = (int**) &dptr
 ```
