--- a/C/포인터의_포인터.md
+++ b/C/포인터의_포인터.md
@@ -1,6 +1,6 @@
 포인터의 포인터
 ===
-### 이중 포인터
+### 1. 이중 포인터
 **포인터 변수를 가리키는 또 다른 포인터 변수**를 뜻하는 것. 포인터 변수와 마찬가지로 종류에 상관없이 무조건 주소 값을 저장하는 변수이다.
 
 ```cpp
@@ -12,7 +12,7 @@ double** dptr = &ptr;	//(double**) dptr = (double*) &ptr	<-- 포인터 변수 pt
 *(*dptr) = ....;	//*(*dptr)은 변수 num을 의미함
 ```
 
-### 포인터 변수 대상의 Call-by-reference
+#### 포인터 변수 대상의 Call-by-reference
 ```cpp
 void SwapIntPtr(int* p1, int* p2)		//주소값 변경 실패
 {
@@ -33,14 +33,14 @@ int* temp = *p1;
 }
 ```
 
-### 포인터 배열의 포인터형
+#### 포인터 배열의 포인터형
 배열 이름이 가리키는 첫번째 요소의 자료형에 따라서 포인터형이 결정된다.
 ```cpp
 int* arr1[20];		//길이가 20인 int형 포인터 배열
 int arr[20];		//배열이름 arr은 int형 포인터
 ```
 
-### 다중 포인터
+#### 다중 포인터
 * *연산자가 둘 이상 사용되어 선언되는 포인터 변수를 가리켜 **'다중 포인터 변수'** 라 한다.
 * 삼중 포인터 변수 이상부터는 프로그램에서 작성할 때마다 등장하는 포인트형이 아니여서 만약 등장한다면<br/>**포인터의 오용 및 남용**은 아닌지, **잘못된 방식으로 접근하고 있는 것**은 아닌지 확인해 볼 필요가 있다.
 ```cpp
@@ -50,4 +50,29 @@ int num =100;
 int* ptr = &num;	//int* ptr = (int) &num
 int** dptr = &ptr;	//int** dptr = (int*) &ptr
 int*** tptr = &dptr;	//int*** tptr = (int**) &dptr
+```
+### 2. 2차원 배열이름의 포인터형
+```cpp
+int arr2d[3][3] = { { 1, 2, 3 },{ 4, 5, 6 }, {7, 8, 9 }};
+printf("arr2d[0] = %d\n",arr2d[0]);		//arr2d[0] = 1 = arr2d[0][0]
+printf("arr2d[1] = %d\n",arr2d[1]);		//arr2d[1] = 4 = arr2d[1][0]
+printf("arr2d[2] = %d\n",arr2d[2]);		//arr2d[2] = 7 = arr2d[2][0]
+
+/*
+배열이름 arr2d를 대상으로 sizeof연산을 하는 경우 배열 전체의 크기를 반환
+sizeof(arr2d) : 36
+arr2d[0], arr2d[1], arr2d[2]를 대상으로 sizeof 연산을 하는 경우 각 행의 크기를 반환, arr2d != arr2d[0]
+sizeof(arr2d[0]) : 12
+sizeof(arr2d[1]) : 12
+sizeof(arr2d[2]) : 12
+*/
+```
+#### 2차원 배열이름의 포인터형 결정 조건
+* 가리키는 대상은 무엇인가?
+* 배열이름(포인터)를 대상으로 값을 1증가 및 감소 시 실제로는 얼마가 증가 및 감소하는가?
+```cpp
+int arr[3][4];
+
+//배열이름 arr이 가리키는 대상은 int형 변수이고, 포인터 연산 시 sizeof(int) * 4의 크기단위로 증가 및 감소하는 포인터 변수 ptr(배열 포인터 변수)
+int (*ptr) [4];	//배열 포인터
 ```
