--- a/C/포인터의_포인터.md
+++ b/C/포인터의_포인터.md
@@ -77,15 +77,16 @@ int arr[3][4];
 int (*ptr) [4];	//배열 포인터
 ```
 #### 2차원 배열이름의 특성과 주의사항
-배열 포인터와 포인터는 여러가지 차이점이 있다.
+* 배열 포인터와 포인터는 여러가지 차이점이 있다.
 ```cpp
 int* whoA[4];	//포인터 배열( 배열 선언, int형 포인터 변수로 이뤄진 int형 포인터 배열, 소괄호 없음)
 int (*whoB)[4];	//배열 포인터( 포인터 변수 선언, 가로 길이가 4인 int형 2차원 배열을 가리키는 용도의 포인터 변수, 소괄호 있음)
-
-//2차원 배열은 함수에 주소값을 인자로 전달할 때, 매개변수는 배열 포인터 선언하여 전달한다.
-int arr1[2][7];  //함수에 전달할 2차원 배열
+```
+* 2차원 배열은 함수에 주소값을 인자로 전달할 때, 매개변수는 배열 포인터 선언하여 전달한다.
+```cpp
+int arr1[2][7];     //함수에 전달할 2차원 배열
 double arr2[4][5];  //함수에 전달할 2차원 배열
 
-void SimpleFunc1(int (*parr1)[7],double (*parr2)[5]){};  //2차원 배열에 대한 함수 정의
-void SimpleFunc2(int whoB[][7],double parr2[][5]){};  //매개변수의 선언에서만 위의 함수와 같은 의미를 지님, int (*parr1)[7] == int parr1[][7]
+void SimpleFunc1(int (*parr1)[7],double (*parr2)[5]){};	//2차원 배열에 대한 함수 정의
+void SimpleFunc2(int whoB[][7],double parr2[][5]){};	//매개변수의 선언에서만 위의 함수와 같은 의미를 지님, int (*parr1)[7] == int parr1[][7]
 ```
