--- a/C/연산자.md
+++ b/C/연산자.md
@@ -1,1 +1,9 @@
+연산자
+===
+
+### 연산자 우선순위와 결합방향
+
+<img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/%EC%97%B0%EC%82%B0%EC%9E%90_%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84.png?raw=true" width="600px" height="600px" title="연산자_우선순위" alt="Operator"></img>
+
+
 
