--- a/C/포인터.md
+++ b/C/포인터.md
@@ -60,7 +60,7 @@ type* ptr	//type형 포인터 변수 ptr
 int arr[i] : arr[i]는 int형 포인터 상수
 &arr[i] : arr[i]에 대한 메모리의 주소값
 arr[i] : arr[i]에 저장된 값
-arr[i] == *(arr+i)	//arr[i]는 *(arr+i)와 같다.
+arr[i] == *(arr+i)	//arr[i]는 *(arr+i)와 같다(a[b] = *(a+b)).
 
 ptr : ptr이 가리키는 대상에 대한 메모리의 주소값(ptr = &arr[i];)
 *ptr : ptr이 가리키는 대상의 값(*ptr = arr[i];)
