--- a/C/포인터의_포인터.md
+++ b/C/포인터의_포인터.md
@@ -90,3 +90,17 @@ double arr2[4][5];  //함수에 전달할 2차원 배열
 void SimpleFunc1(int (*parr1)[7],double (*parr2)[5]){};	//2차원 배열에 대한 함수 정의
 void SimpleFunc2(int whoB[][7],double parr2[][5]){};	//매개변수의 선언에서만 위의 함수와 같은 의미를 지님, int (*parr1)[7] == int parr1[][7]
 ```
+* 2차원 배열에서도 arr[i]와 *(arr+i)는 같다.
+```cpp
+int arr[3][2] = { { 1, 2 }, { 3, 4 }, { 5, 6 } };
+
+//arr[i][j] == (*(arr+i))[j] == *(arr[i]+j)  == *(*(arr+i)+j)
+//배열에 대한 차원이 증가할 때마다 *(x + a) 또는 (x)[a]로 표시(x는 나머지 차원 배열, a는 새롭게 생긴 차원 배열)
+arr[2][1] = 4;
+(*(arr+2))[1] = 4;
+*(arr[2]+1) = 4;
+*(*(arr+2)+1) = 4;
+```
+
+
+
