--- a/C/learn/연산자.md
+++ b/C/learn/연산자.md
@@ -30,7 +30,7 @@ num--;  //속한 문장을 먼저 진행한 후, 값을 1 감소(선 연산, 후
 ### 2. 연산자의 우선순위와 결합방향
 * '연산자의 우선순위'는 **우선 순위가 더 높거나 낮은 다른 연산자가 있는 경우에만 의미하며, 우선 순위가 높은 연산자가 있는 식이 먼저 계산**된다.
 * '연산자의 결합방향'은 **우선 순위가 동일한 두 연산자가 하나의 수식에 존재하는 경우, 어떠한 순서대로 연산하느냐를 결정하는것**을 뜻한다.
-<img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/%EC%97%B0%EC%82%B0%EC%9E%90_%EC%9A%B0%EC%84%A0%EC%88%9C%EC%9C%84.png?raw=true" width="600px" height="600px" title="연산자_우선순위" alt="Operator"></img>
+<img src="https://github.com/YouAndMeToo3323/TIL/assets/126636390/e22b3ec9-e75f-4fe1-9ece-3e987101aa7d" width="600px" height="600px" title="연산자_우선순위" alt="Operator"></img>
 
 
 
