--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -73,7 +73,7 @@ int puts(const char* s);
 int fputs(const char* s, FILE* stream);
 ```
 #### 문자열 입력 함수(gets, fgets)
-* gets 함수는 미리 마련해 놓은 배열을 넘어서는 길이의 문자열이 입력되면, 할당 받지 않는 메모리 공간을 침범하여 실행 중 오류가 발생한다는 단점이 있다.
+* gets 함수는 미리 마련해 놓은 배열을 넘어서는 길이의 문자열이 입력되면, 할당 받지 않는 메모리 공간을 침범하여 실행 중 오류가<br/> 발생한다는 단점이 있다.
 * fgets 함수는 stdin으로부터 문자열을 입력 받아서 sizeof(str)의 길이만큼만 배열 str에 저장한다.
 ```cpp
 #include <stdio.h>
@@ -88,7 +88,7 @@ fgets(str,sizeof(str),stdin);	//stdin으로부터 문자열 입력 받아서 str
 ...	
 ```
 * 여기서도 문자열과 같이 문자열을 입력 받으면 문자열의 끝에 자동으로 널 문자가 추가된다.
-* fgets 함수는 \n을 만날 때까지 문자열을 읽어 들이는데, \n을 제외시키거나 버리지 않고 문자열의 입부로 받아들인다(입력 한 엔터 키의 정보까지도 문자열의 일부로 저장).
+* fgets 함수는 \n을 만날 때까지 문자열을 읽어 들이는데, \n을 제외시키거나 버리지 않고 문자열의 입부로 받아들인다(입력 한 엔터 키의<br/> 정보까지도 문자열의 일부로 저장).
 ```cpp
 char str[7];
 int i;
@@ -105,23 +105,23 @@ for(i = 0; i<3; i++)
 ### 표준 입출력과 버퍼
 
 #### 표준 입출력 함수
-ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등).
-표준 입출력 함수를 통해서 입출력한 데이터들은 운영체제가 제공하는 '메모리 버퍼'를 중간에 통과하게 된다.
-이 때 키보드로부터 입력된 데이터가 입력 스트림을 거쳐서 입력 버퍼로 들어가는 시점은 엔터키가 눌리는 시점이다.
+ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표준 입출력 함수를 통해서 입출력한 데이터들은 운영체제가 제공하는<br/>'메모리 버퍼'를 중간에 통과하게 된다.
+이 때 키보드로부터 입력된 데이터가 입력 스트림을 거쳐서 입력 버퍼로 들어가는 시점은 엔터키가<br/> 눌리는 시점이다.
 
 
-* 메모리 버퍼 : 데이터를 임시로 모아두는(저장하는) 메모리 공간.
+* **메모리 버퍼** : 데이터를 임시로 모아두는(저장하는) 메모리 공간.
 ```
 실행중인 프로그램 창에서
-키보드(입력)-> 입력 스트림(통로) -> 입력 버퍼(엔터키) -> 실행중인 프로그램 -> 출력 스트림(통로) -> 출력 버퍼(출력) -> 모니터(화면에 표기)
+키보드(입력)-> 입력 스트림(통로) -> 입력 버퍼(엔터키) -> 실행중인 프로그램 ->
+출력 스트림(통로) -> 출력 버퍼(출력) -> 모니터(화면에 표기)
 ```
 
-* 버퍼링(Buffering)
+* **버퍼링(Buffering)** <br/>
 데이터를 목적지로 바로 전송하지 않고 중간에 출력버퍼와 입력버퍼를 둬서 전송하고자 하는 데이터를 임시 저장을 뜻함. 
 
-* 데이터 버퍼링을 하는 이유
+* **데이터 버퍼링을 하는 이유** <br/>
 가장 큰 이유는 '데이터 전송의 효율성'과 관련이 있다.
-버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로 이동시키는 것보다 중간에 메모리 버퍼를 둬서 데이터를 한데 묵어서 이동시키는 것이 보다 효율적이고 빠르다.
+버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 중간에 메모리 버퍼를 둬서 데이터를 한데 묵어서 이동시키는 것이 보다 효율적이고 빠르다.
 
 
 
