--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -5,11 +5,11 @@
 * **프로그램상에서 입출력 장치들을 대상으로 데이터를 입출력하기 하기 위해서는 이들을 연결시켜 주는 다리**가 필요하다.<br/>이러한 다리의 역할을 하는 매개체를 **'스트림(stream)'** 이라 한다.
 * 운영체제는 외부장치와 프로그램과의 데이터 송수신의 도구가 되는 스트림을 제공하고 있다.
 
-```cpp
-stdin  //표준 입력 스트림  키보드 대상으로 입력
-stdout //표준 출력 스트림  모니터 대상으로 출력
-stdin  //표준 에러 스트림  모디터 대상으로 입력
-```
+|종류|이름|역할|
+|-|-|-|
+|stdin|표준 입력 스트림|키보드 대상으로 입력|
+|stdout|표준 출력 스트림|모니터 대상으로 출력|
+|stderr|표준 에러 스트림|모디터 대상으로 입력|
 
 #### 1. 문자 출력 함수(putchar, fputc)
 * **putchar 함수**는 인자로 전달된 문자정보를 stdout으로 표현되는 표준 출력 스트림으로 전송하는 함수이다.
