--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -9,7 +9,7 @@
 |-|-|-|
 |stdin|표준 입력 스트림|키보드 대상으로 입력|
 |stdout|표준 출력 스트림|모니터 대상으로 출력|
-|stderr|표준 에러 스트림|모디터 대상으로 입력|
+|stderr|표준 에러 스트림|모디터 대상으로 출력|
 
 #### 1. 문자 출력 함수(putchar, fputc)
 * **putchar 함수**는 인자로 전달된 문자정보를 stdout으로 표현되는 표준 출력 스트림으로 전송하는 함수이다.
