--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -117,7 +117,7 @@ ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표
 ```
 
 * **버퍼링(Buffering)** <br/>
-데이터를 목적지로 바로 전송하지 않고 중간에 **출력버퍼와 입력버퍼를 둬서 전송하고자 하는 데이터를 임시 저장**을 뜻함. 
+데이터를 목적지로 바로 전송하지 않고 중간에 **입력버퍼와 출력버퍼를 둬서 전송하고자 하는 데이터를 임시 저장**을 뜻함. 
 
 * **데이터 버퍼링을 하는 이유** <br/>
 가장 큰 이유는 **'데이터 전송의 효율성'과 관련**이 있다.
