--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -139,8 +139,24 @@ void ClearLineFromReadBuffer(void)
 	while(getchar() != '\n');//프로그램 사용자가 잘못 입력을 해도 \n을 만나면 나머지를 지워버린다.
 }
 ```
+#### 문자열의 길이를 반환하는 함수(strlen)
+* strlen은 **인자로 전달된 문자열의 길이를 반환하는 함수**로서 문자열과 관련해서 많이 사용되는 대표적인 함수이다.
+* **전달된 문자열의 길이를 반환하되, 널 문자는 길이에 포함하지 않는다.**
+```cpp
+#include <string.h>
 
+//size_t len == unsigned int len
+size_t strlen(const char* s);
 
+printf("%u \n",strlen(str)); 	//str은 문자열
+
+//fget함수호출로 입력한 문자열에 존재하는 개행(\n)을 strlen함수를 이용하여 제거할 수 있다.
+void RemoveBSN(char str[])
+{
+	int len = strlen(str);
+	str[len - 1] = 0;
+}
+```
 
 
 
