--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -121,7 +121,7 @@ ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표
 
 * **데이터 버퍼링을 하는 이유** <br/>
 가장 큰 이유는 **'데이터 전송의 효율성'과 관련**이 있다.
-버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 **중간에 메모리 버퍼를 둬서 데이터를 한데 묵어서 이동시키는 것이 보다 효율적이고 빠르다**.
+버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 **중간에 메모리 버퍼를 둬서 데이터를 한데 묶어서 이동시키는 것이 보다 효율적이고 빠르다**.
 
 * **입력버퍼와 출력버퍼를 비우는 fflush 함수**<br/>
 입력버퍼에 남아있는 불필요한 데이터를 버퍼를 떠나서 소멸시키거나, 출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동시키는 함수.
@@ -159,7 +159,43 @@ void RemoveBSN(char str[])
 	str[len - 1] = 0;
 }
 ```
+#### 문자열을 복사하는 함수(strcpy, strncpy)
+```cpp
+#include <string.h>
 
+//복사된 문자열의 주소 값 반환
+char* strcpy(char* dest, const char* src);
+char* strncpy(char* dest, const char* src,size_t n);
+
+char str1[30] = "Simple String";
+char str2[30];
+strcpy(str2,str1);	//str1의 문자열을 str2에 복사
+strncpy(str2,str1,sizeof(str2));	//str1의 문자열을 str2에 복사, 문자열의 크기는 str2로 지정	
+```
+* strncpy함수는 **복사하는 과정에서 세 번째 인자 크기에 널 문자를 포함할 공간이 모자르면 문제가 생긴다.** 그러므로 **strncpy함수의 세 번째 인자로 배열의 실제길이보다 하나 작은 값을 전달**해서 널 문자가 삽입될 공간을 남겨두고 복사해야 한다.
+```cpp
+char str1[20] = "1234567890";
+char str3[5];
+
+//출력 결과 : 1234
+strncpy(str3, str1, sizeof(str3) - 1);
+```
+#### 문자열을 덧붙이는 함수(strcat, strncat)
+* 문자열의 뒤에 **다른 문자열을 복사하는 기능**을 제공하는 함수이다.
+* 덧붙임이 시작되는 위치는 **널 문자 다음이 아닌 널 문자가 저장된 위치에서부터 복사가 진행**됨으로써 덧붙임 이후에도 **문자열 끝에 하나의 널문자가 존재**한다.
+```cpp
+#include <string>
+
+//덧붙여진 문자열의 주소 값 반환
+char* strcat(char* dest, const char* src);
+char* strncat(char* dest, const char* src, size_t n);
+
+char str1[30] = "First~";
+char str2[20] = "Second";
+
+strcat(str1,str2);		//str1의 문자열 뒤에 str2를 복사, "First~\n"에서 "First~Second\n"로 덧붙어진다.
+strncat(str1,str2,8);	//str1의 문자열 뒤에 str2의 8개 문자까지만 복사, str2의 길이가 8을 넘어도 널 문자(\n)를 포함하여 총 9개의 문자가 덧붙여진다.
+```
 
 
 
