--- a/C/learn/구조체.md
+++ b/C/learn/구조체.md
@@ -1,13 +1,17 @@
 ### 구조체(structure)
-* 하나 이상의 변수(포인터 변수와 배열 포함)를 묶어서 새로운 자료형을 정의하는 도구이다.
-* 새로운 자료형들을 대상으로 변수을 선언할 수 있는데 이렇게 선언되는 변수를 가리켜 '구조체 변수'라 한다.
+* **하나 이상의 변수(포인터 변수와 배열 포함)를 묶어서 새로운 자료형을 정의하는 도구**이다.
+* 새로운 자료형들을 대상으로 변수을 선언할 수 있는데 이렇게 선언되는 변수를 가리켜 **'구조체 변수'** 라 한다.
 * 구조체의 멤버로 배열이 선언되면 배열의 접근방식을, 포인터 변수가 선언되면 포인터 변수의 접근방식을 취하면 된다.
+* **구조체 선언 한 뒤에 문자열을 넣을려면 strcpy함수를 사용해야 한다.** 이미 할당한 배열에는 문자열을 넣을 수 없기 때문이다.
 ```cpp
+#include <stdio.h>
+#include <string.h>
+
 struct person	//person이라는 이름의 구조체 정의
 {
   char name[20];	//이름 저장을 위한 멤버
   char phoneNum[20];	//전화번호 저장을 위한 멤버
-  int age;  //나이저장을 위한 멤버
+  int age;	//나이 저장을 위한 멤버
 };
 
 //구조체의 정의와 변수의 선언
@@ -25,8 +29,47 @@ int main()
   //person 구조체의 변수 man 선언
   struct person man;
 
-  //구조체 변수 man의 멤버 변수
+  //구조체 변수 man의 멤버에 대한 예시
   man.age = 14;
+  strcpy(man.name, "사람 이름");
   printf("%s \n", man.name);
 }
+```
+* 구조체 변수는 int형 변수와 같이 선언과 동시에 초기화 할 수 있다(초기화 방법은 배열의 초기화와 유사). 이 때, 초기화하는 과졍에서는<br/>**문자열 저장을 위해서 strcpy함수를 호출하지 않아도 된다.**
+```cpp
+struct point
+{
+  int xpos;
+  int ypos;
+};
+
+int main()
+{
+  //구조체 변수의 선언 및 초기화
+  struct point pos = {20, 30};
+}
+```
+#### 구조체 배열의 선언과 초기화
+* 구조체 배열의 선언방법은 일반적인 배열의 선언방법과 동일하다.
+
+**int형 변수 : int num				->		int형 배열 : int arr[10]<br/>**
+**point형 변수 : struct point pos	->		point형 배열 : struct point arr[10]**
+
+* 구조체 배열은 선언 및 초기화할 때에는 배열의 길이만큼 중괄호를 이용해서 초기화한다.
+```cpp
+struct person arr[3] = {
+  { "사람 이름", "전화번호", 21(나이) },
+  {...}, {...} 
+};
+```
+
+#### 구조체 변수와 포인터
+```cpp
+//int형 포인터 변수의 선언 및 초기화
+int num = 10;
+int* iptr = &num;
+
+//point형 구조체의 포인터 변수의 선언 및 초기화
+struct point pos = {11, 12};
+struct point* pptr = &pos;//포인터 변수 pptr이 구조체 변수 pos를 가리킴
 ```
