--- a/C/learn/구조체.md
+++ b/C/learn/구조체.md
@@ -62,14 +62,23 @@ struct person arr[3] = {
   {...}, {...} 
 };
 ```
-
-#### 구조체 변수와 포인터
+#### 구조체 포인터 변수
+* 구조체 포인터 변수의 선언 및 연산의 방법도 일반적인 포인터 변수의 선언 및 연산의 방법과 비슷하다.
 ```cpp
-//int형 포인터 변수의 선언 및 초기화
+//int형 포인터 변수 선언 및 초기화
 int num = 10;
 int* iptr = &num;
 
-//point형 구조체의 포인터 변수의 선언 및 초기화
-struct point pos = {11, 12};
-struct point* pptr = &pos;//포인터 변수 pptr이 구조체 변수 pos를 가리킴
+//point형 구조체의 포인터 변수 선언 및 초기화
+struct point pos = {11, 12};	//xpos, ypos를 각각 11, 12로 초기화
+struct point* pptr = &pos;		//포인터 변수 pptr이 구조체 변수 pos를 가리킴
+
+//point형 포인터 변수 pptr을 이용해서 구조체 변수 pos에 접근
+(*pptr).xpos = 10;	//pptr이 가리키는 구조체 변수의 멤버 xpos에 10 저장
+(*pptr).ypos = 20;	//pptr이 가리키는 구조체 변수의 멤버 ypos에 20 저장
+
+// *연산(포인터 변수에 대한 접근)과 .연산(구조체에 대한 접근)을 하나의 ->연산으로 대신할 수 있다.
+pptr->xpos = 15;	//pptr이 가리키는 구조체 변수의 멤버 xpos에 15 저장
+pptr->ypos = 25;	//pptr이 가리키는 구조체 변수의 멤버 ypos에 25 저장
 ```
+* 배열이 구조체 멤버로 선언될 수 있듯이, **포인터 변수도 구조체의 멤버가 될 수 있다.** <br/>또한, TYPE형 구조체 변수의 멤버로 **TYPE형 포인터 변수도** 둘 수 있다.
