--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -7,10 +7,11 @@ typedef int INT;
 typedef int* PTR_INT;
 typedef unsigned int UINT;
 
-//name3이 'name1 name2'에 부여된 새로운 이름
+//name3은 마지막에 등장하는 단어로서 'name1 name2'에 부여된 새로운 이름
 typedef name1 name2 name3;
-
 ```
+* typedef로 정의되는 자료형의 이름은 대문자로 사용함으로써 기본 자료형의 이름과 typedef로 새로이 정의된 자료형의 이름을 구분할 수 <br/>있다.
+
 |새로 부여된 이름|대상 자료형|
 |-|-|
 |INT|int|
@@ -20,7 +21,30 @@ typedef name1 name2 name3;
 |UCHAR|unsigned char|
 PTR_UCHAR|unsigned char*|
 
+#### 구조체에 대한 typedef 선언 종류 및 방법
+```cpp
+//1. 구조체 point 대상의 typedef선언
+struct point
+...
+...
+...
+};
+typedef struct point point;
 
+//2.typedef선언이 추가된 형태의 구조체의 정의
+typedef struct point
+...
+...
+...
+} point;
+
+//3. 구조체의 이름 생략
+typedef struct
+...
+...
+...
+} point;
+```
 
 
 
