--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -45,8 +45,52 @@ typedef struct
 ...
 } point;
 ```
+#### 구조ㅔ 변수를 대상으로 가능한 연산
+* 구조체 변수는 매우 제한된 형태의 연산만 허용이 된다. 가장 대표적인 연산은 대입연산이며, 그 이외로 주소 값 반환을 목적으로 하는 <br/>& 연산이나 구조체 변수의 크기를 반환하는 sizeof 정도의 연산만 허용이 된다.
+```cpp
+typedef struct point
+{
+  int xpos;
+  int ypos;
+}Point;
 
+//함수의 정의를 통해서 덧셈이나 뺄셈의 결과를 프로그래머가 직접 정의
+Point AddPoint(Point pos1, Point pos2)
+{
+  Point pos = {pos1.xpos + pos2.xpos, pos1.ypos + pos2.ypos};
+  return pos;
+}
+Point MinPoint(Point pos1, Point pos2)
+{
+  Point pos = {pos1.xpos - pos2.xpos, pos1.ypos - pos2.ypos};
+  return pos;
+}
 
+int main()
+{
+  Point pos1 = {1, 2};
+  Point pos2;
+
+  pos2 = pos1;	//구조체 변수간 대입연산의 결과로 pos1의 멤버 대 pos2의 멤버의 복사가 이루어진다.
+
+  printf("pos1의 크기: %d \n", sizeof(pos1));//pos1의 전체 크기 반환
+  printf("pos1 : [%d %d]\n", pos1.xpos, pos1.ypos);
+  printf("pos2의 크기: %d \n" sizeof(pos2));//pos1의 전체 크기 반환
+  printf("pos2 : [%d %d]\n", pos2.xpos, pos2.ypos);
+  printf("pos1의 주소값 : %p, pos2의 주소값 : %p\n",&pos1,&pos2);//주소값 반환
+
+  //덧셈과 뺄셈
+  AddPoint(pos1,pos2);
+  printf("pos1 : [%d %d]\n", pos1.xpos, pos1.ypos);
+  printf("pos2 : [%d %d]\n", pos2.xpos, pos2.ypos);
+  printf("pos1의 주소값 : %p, pos2의 주소값 : %p\n",&pos1,&pos2);//주소값 반환
+  MinPoint(pos1,pos2);
+  printf("pos1 : [%d %d]\n", pos1.xpos, pos1.ypos);
+  printf("pos2 : [%d %d]\n", pos2.xpos, pos2.ypos);
+  printf("pos1의 주소값 : %p, pos2의 주소값 : %p\n",&pos1,&pos2);//주소값 반환
+  return 0;
+}
+```
 
 
 
