--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -45,7 +45,7 @@ typedef struct
 ...
 } point;
 ```
-#### 구조ㅔ 변수를 대상으로 가능한 연산
+#### 구조체 변수를 대상으로 가능한 연산
 * 구조체 변수는 매우 제한된 형태의 연산만 허용이 된다. 가장 대표적인 연산은 대입연산이며, 그 이외로 주소 값 반환을 목적으로 하는 <br/>& 연산이나 구조체 변수의 크기를 반환하는 sizeof 정도의 연산만 허용이 된다.
 ```cpp
 typedef struct point
