--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -111,7 +111,7 @@ typedef union ubox  //공용체 ubox 정의
   double mem3;
 }UBox;//주소값 호출시 mem1, mem2, mem3의 주소 값이 동일
 ```
-* 하나의 메모리 공간을 둘 이상의 방식으로 접근할 수 있다. 이 방식을 이용하여 **공용체 변수의 메모리 공간을 할당하고 공유한다.**
+* 하나의 메모리 공간을 둘 이상의 방식으로 접근할 수 있다.
 ```cpp
 typedef struct dbshort
 {
@@ -140,7 +140,8 @@ int main()
   return 0;
 }
 ```
-
+* 공용체를 이용하여 **공용체 변수의 메모리 공간을 할당하고 공유한다.**
+<img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/%EA%B3%B5%EC%9A%A9%EC%B2%B4_%EB%B3%80%EC%88%98%EC%9D%98_%ED%95%A0%EB%8B%B9%EA%B3%BC_%EA%B3%B5%EC%9C%A0.png?raw=true" width ="600px" height= "400px" title = "공용체 변수의 할당과 공유"></img>
 
 
 
