--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -143,7 +143,14 @@ int main()
 * 공용체를 이용하여 **공용체 변수의 메모리 공간을 할당하고 공유한다.**
 <img src="https://github.com/YouAndMeToo3323/TIL/blob/main/C/image/%EA%B3%B5%EC%9A%A9%EC%B2%B4_%EB%B3%80%EC%88%98%EC%9D%98_%ED%95%A0%EB%8B%B9%EA%B3%BC_%EA%B3%B5%EC%9C%A0.png?raw=true" width ="600px" height= "400px" title = "공용체 변수의 할당과 공유"></img>
 
-
+#### 열거형(Enumerated Type)
+* 자료형 정의방법은 구조체 및 공용체와 유사하고 정의된 열거형 기반의 변수 선언 방법은 구조체 및 공용체와 완전히 동일하다.
+* 멤버에 저장할 값의 유형을 결정하는 구조체와 공용체와 달리 저장이 가능한 값 자체를 정수의 형태로 결정.
+```cpp
+enum syllable	//syllable이라는 이름의 열거형 정의
+{
+  Do = 1, Re = 2, Mi = 3, Fa = 4, So = 5, La = 6, Ti = 7
+};
 
 
 
