--- a/C/learn/구조체_2.md
+++ b/C/learn/구조체_2.md
@@ -146,11 +146,20 @@ int main()
 #### 열거형(Enumerated Type)
 * 자료형 정의방법은 구조체 및 공용체와 유사하고 정의된 열거형 기반의 변수 선언 방법은 구조체 및 공용체와 완전히 동일하다.
 * 멤버에 저장할 값의 유형을 결정하는 구조체와 공용체와 달리 저장이 가능한 값 자체를 정수의 형태로 결정.
+* **열거형은 둘 이상의 연관이 있는 이름을 상수로 선언함으로써 프로그램의 가독성을 높인다.**
 ```cpp
 enum syllable	//syllable이라는 이름의 열거형 정의
 {
+  //열거형 상수(enumeration constants) : 열거형 타입에서 int형으로 표현된 상수
+  //int형 데이터가 올 수 있는 위치에는 '열거형 상수'가 올 수 있다.
   Do = 1, Re = 2, Mi = 3, Fa = 4, So = 5, La = 6, Ti = 7
 };
+
+  //RED부터 0으로 시작해서 1씩 증가하는 형태로 결정된다.
+  enum RGB { RED, GREEN, BLUE };
+
+  //값이 선언되지 않으면 앞서 선언된 상수보다 1이 증가된 값이 할당된다(BLUE는 4, BLACK은 7).
+  enum color { RED = 3, BLUE, WHITE = 6, BLACK };
 ```
 
 
