--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -40,7 +40,7 @@ int fclose(FILE* stream);
 #### fopen함수의 호출로 개방되었던 파일을 닫아줘야하는 이유
 
 * **운영체제가 할당한 자원의 반환**
-  *  운영체제에 할당된 파일에 대한 자원(주로 메모리)은 파일을 닫아주지 않으면 자원 손실을 초래하기 때문에 fclose함수를 호출해서 <br/>자원을 반환한다.
+  *  운영체제에 할당된 파일에 대한 자원(주로 메모리)은 **파일을 닫아주지 않으면 자원 손실을 초래**하기 때문에 fclose함수를 호출해서 <br/>자원을 반환한다.
 * **버퍼링 되었던 데이터의 출력**
   * 운영체제는 프로그램과 파일 사이에 입출력 버퍼를 둬서 성능의 향상을 도모하는데, **데이터**는 **출력버퍼에 저장되었다가 운영체제가 <br/>정해놓은 버퍼링 방식에 따라서 뒤늦게 파일에 저장**이 된다. 데이터 손실(프로그램의 오류)을 예방하기 위하여 **fclose함수의 호출**을<br/>통해 파일을 닫아주면 **출력 버퍼에 저장되어 있던 데이터가 파일로 이동하면서 출력버퍼는 비워지게 된다.**
 
