--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -123,7 +123,7 @@ ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표
 가장 큰 이유는 **'데이터 전송의 효율성'과 관련**이 있다.
 버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 **중간에 메모리 버퍼를 둬서 데이터를 한데 묶어서 이동시키는 것이 보다 효율적이고 빠르다**.
 
-* **입력버퍼와 출력버퍼를 비우는 fflush 함수**<br/>
+* **입력버퍼와 출력버퍼를 비우는 함수(fflush)** <br/>
 입력버퍼에 남아있는 불필요한 데이터를 버퍼를 떠나서 소멸시키거나, 출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동시키는 함수.
 
 ```cpp
