--- a/C/learn/스트림과_데이터의_이동.md
+++ b/C/learn/스트림과_데이터의_이동.md
@@ -123,15 +123,15 @@ ANSI C의 표준에서 정의된 함수(printf, scanf, fputc, fgetc 등등). 표
 가장 큰 이유는 **'데이터 전송의 효율성'과 관련**이 있다.
 버퍼링 없이 키보드가 눌릴 때마다 눌린 문자의 정보를 목적지로 바로<br/> 이동시키는 것보다 **중간에 메모리 버퍼를 둬서 데이터를 한데 묶어서 이동시키는 것이 보다 효율적이고 빠르다**.
 
-* **입력버퍼와 출력버퍼를 비우는 함수(fflush)** <br/>
-입력버퍼에 남아있는 불필요한 데이터를 버퍼를 떠나서 소멸시키거나, 출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동시키는 함수.
+* **출력버퍼를 비우는 함수(fflush)** <br/>
+출력버퍼에 저장된 데이터가 버퍼를 떠나서 목적지로 이동시키는 함수.
+출력버퍼가 비워지는 시점은 시스템에 따라 그리고 버퍼의 성격에 따라 동일하지 않기 때문에 함수를 이용하여 데이터를 목적지로 이동시킨다.
 
 ```cpp
 #include <stdio.h>
-int fflush(FILE* stream);//함수호출 성공 시 0, 실패 시 EOF 반환
 
-fflush(stdout);		//표준 출력버퍼를 비움(저장된 데이터를 목적지로 이동)
-fflush(stdin);		//표준 입력버퍼를 비움(남아있는 데이터를 소멸)
+int fflush(FILE* stream);//함수호출 성공 시 0, 실패 시 EOF 반환
+fflush(stdout);//표준 출력버퍼를 비움(저장된 데이터를 목적지로 이동)
 
 //\n을 만날 때까지 문자를 읽어 들이는 함수(입력 버퍼에 저장된 문자들을 지우는 함수)
 void ClearLineFromReadBuffer(void)
