--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -45,8 +45,9 @@ int fclose(FILE* stream);
   * 운영체제는 프로그램과 파일 사이에 입출력 버퍼를 둬서 성능의 향상을 도모하는데, **데이터**는 **출력버퍼에 저장되었다가 운영체제가 <br/>정해놓은 버퍼링 방식에 따라서 뒤늦게 파일에 저장**이 된다. 데이터 손실(프로그램의 오류)을 예방하기 위하여 **fclose함수의 호출**을<br/>통해 파일을 닫아주면 **출력 버퍼에 저장되어 있던 데이터가 파일로 이동하면서 출력버퍼는 비워지게 된다.**
 
 #### 출력버퍼를 비우는 함수(fflush) - [표준입출력함수](https://github.com/YouAndMeToo3323/TIL/blob/main/C/learn/%EC%8A%A4%ED%8A%B8%EB%A6%BC%EA%B3%BC_%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98_%EC%9D%B4%EB%8F%99.md#%ED%91%9C%EC%A4%80-%EC%9E%85%EC%B6%9C%EB%A0%A5-%ED%95%A8%EC%88%98)
-* fflush함수는 출력버퍼를 비우는 함수로서 출력버퍼를 비운다는 것은 출력버퍼에 저장된 데이터를 목적지로 전송한다는 의미를 가진다.
+* **fflush함수**는 **출력버퍼를 비우는 함수**로서 출력버퍼를 비운다는 것은 **출력버퍼에 저장된 데이터를 목적지로 전송한다**는 의미를 가진다.
 * 입력버퍼를 비운다는 것은 입력버퍼에 저장된 데이터를 소멸시킨다는 의미이지만, fflush함수는 입력버퍼를 대상으로 호출할 수 없다.
+* 파일에 저장된 데이터는 **원할 때 언제든지 읽을 수 있을 뿐만 아니라 파일 대상의 입력버퍼를 비워야만 하는 상황이라는 것이 특별히 <br/>존재하지 않기 때문에** 파일 스트림의 입력버퍼를 비우는 함수가 필요가 없다.**(읽혀진 데이터는 입력버퍼에서 지워진다)**
 
 
 
