--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -49,7 +49,11 @@ int fclose(FILE* stream);
 * 입력버퍼를 비운다는 것은 입력버퍼에 저장된 데이터를 소멸시킨다는 의미이지만, fflush함수는 입력버퍼를 대상으로 호출할 수 없다.
 * 파일에 저장된 데이터는 **원할 때 언제든지 읽을 수 있을 뿐만 아니라 파일 대상의 입력버퍼를 비워야만 하는 상황이라는 것이 특별히 <br/>존재하지 않기 때문에** 파일 스트림의 입력버퍼를 비우는 함수가 필요가 없다.**(읽혀진 데이터는 입력버퍼에서 지워진다)**
 
+```cpp
+#include <stdio.h>
 
+int fflush(FILE* stream);//함수호출 성공 시 0, 실패 시 EOF 반환
+```
 
 
 
