--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -52,7 +52,8 @@ int fclose(FILE* stream);
 ```cpp
 #include <stdio.h>
 
-int fflush(FILE* stream);//함수호출 성공 시 0, 실패 시 EOF 반환
+//함수호출 성공 시 0, 실패 시 EOF 반환
+int fflush(FILE* stream);
 ```
 
 
