--- a/C/learn/파일_입출력.md
+++ b/C/learn/파일_입출력.md
@@ -56,6 +56,25 @@ int fclose(FILE* stream);
 int fflush(FILE* stream);
 ```
 
+### 파일의 개방 모드(Mode)
+
+#### 스트림을 구분하는 기준1
+데이터의 이동방향을 기준으로 네 가지로 구분한다.
+
+* 데이터 READ 스트림		    	읽기만 가능
+* 데이터 WRITE 스트림		   	쓰기만 가능
+* 데이터 APPEND 스트림	   	쓰되 덧붙여 쓰기만 가능
+* 데이터 READ/WRITE 스트림	읽기, 쓰기 모두 가능
+
+
+|모드(mode)|스트림의 성격|파일이 없으면?|
+|:-:|:-|:-:|
+|r|읽기 가능|에러|
+|w|쓰기 가능|생성|
+|a|파일의 끝에 덧붙여 쓰기 가능|생성|
+|r+|읽기/쓰기 가능|에러|
+|w+|읽기/쓰기 가능|생성|
+|a+|읽기/덧붙여 쓰기 가능|생성|
 
 
 
