--- a/C/learn/자료형과_상수.md
+++ b/C/learn/자료형과_상수.md
@@ -48,13 +48,13 @@ double num3 = 2.12 + 7.49	//2.12와 7.49는 상수, num3은 변수
 * 특수문자의 종류
 
 |특수문자|의미하는바|특수문자|의미하는바|
-|-|-|-|-|
+|:-:|-|:-:|-|
 |\a|경고음|\t|수평 탭|
 |\b|백스페이스(backspacse)|\v|수직 탭|
-|\f|폼 피드(form feed)|\'|작은 따옴표 출력|
-|\n|개 행(new line)|\"|큰 따옴표 출력|
-|\r|캐리지 리턴(carriage return)|\?|물음표 출력|
-| \ \ |역슬래쉬 출력|
+|\f|폼 피드(form feed)|\\'|작은 따옴표 출력|
+|\n|개 행(new line)|\\"|큰 따옴표 출력|
+|\r|캐리지 리턴(carriage return)|\\?|물음표 출력|
+| \\\ |역슬래쉬 출력|
 
 * 서식문자의 종류와 의미
 
